@@ -67,6 +67,7 @@ public class FTPTransfer implements FileTransfer {
     public static final String FTP_TIMEVAL_FORMAT = "yyyyMMddHHmmss";
 
     // Obsolete property names
+    public static final String OBSOLETE_UTF8_ENCODING = "ftp-use-utf8";
     private static final String OBSOLETE_PROXY_TYPE = "Proxy Type";
     private static final String OBSOLETE_PROXY_HOST = "Proxy Host";
     private static final String OBSOLETE_PROXY_PORT = "Proxy Port";
@@ -100,8 +101,7 @@ public class FTPTransfer implements FileTransfer {
         .addValidator(StandardValidators.DATA_SIZE_VALIDATOR)
         .build();
     public static final PropertyDescriptor UTF8_ENCODING = new PropertyDescriptor.Builder()
-            .name("ftp-use-utf8")
-            .displayName("Use UTF-8 Encoding")
+            .name("Use UTF-8 Encoding")
             .description("Tells the client to use UTF-8 encoding when processing files and filenames. If set to true, the server must also support UTF-8 encoding.")
             .required(true)
             .allowableValues("true", "false")
@@ -218,12 +218,12 @@ public class FTPTransfer implements FileTransfer {
         int count = 0;
         final FTPFile[] files;
 
-        if (path == null || path.trim().isEmpty()) {
+        if (path == null || path.isBlank()) {
             files = client.listFiles(".");
         } else {
             files = client.listFiles(path);
         }
-        if (files.length == 0 && path != null && !path.trim().isEmpty()) {
+        if (files.length == 0 && path != null && !path.isBlank()) {
             // throw exception if directory doesn't exist
             final boolean cdSuccessful = setWorkingDirectory(path);
             if (!cdSuccessful) {
@@ -421,7 +421,7 @@ public class FTPTransfer implements FileTransfer {
         }
 
         final String lastModifiedTime = ctx.getProperty(LAST_MODIFIED_TIME).evaluateAttributeExpressions(flowFile).getValue();
-        if (lastModifiedTime != null && !lastModifiedTime.trim().isEmpty()) {
+        if (lastModifiedTime != null && !lastModifiedTime.isBlank()) {
             try {
                 final DateTimeFormatter informat = DateTimeFormatter.ofPattern(FILE_MODIFY_DATE_ATTR_FORMAT, Locale.US);
                 final OffsetDateTime fileModifyTime = OffsetDateTime.parse(lastModifiedTime, informat);
@@ -436,7 +436,7 @@ public class FTPTransfer implements FileTransfer {
             }
         }
         final String permissions = ctx.getProperty(PERMISSIONS).evaluateAttributeExpressions(flowFile).getValue();
-        if (permissions != null && !permissions.trim().isEmpty()) {
+        if (permissions != null && !permissions.isBlank()) {
             try {
                 int perms = numberPermissions(permissions);
                 if (perms >= 0) {
