@@ -16,109 +16,101 @@
  */
 package org.apache.nifi.processors.standard;
 
-import org.apache.avro.Schema;
-import org.apache.avro.file.DataFileStream;
-import org.apache.avro.generic.GenericData;
-import org.apache.avro.generic.GenericDatumReader;
-import org.apache.avro.generic.GenericRecord;
-import org.apache.avro.util.Utf8;
-import org.apache.nifi.avro.AvroRecordSetWriter;
-import org.apache.nifi.controller.AbstractControllerService;
 import org.apache.nifi.dbcp.DBCPService;
 import org.apache.nifi.flowfile.attributes.CoreAttributes;
 import org.apache.nifi.flowfile.attributes.FragmentAttributes;
-import org.apache.nifi.processor.exception.ProcessException;
+import org.apache.nifi.json.JsonRecordSetWriter;
+import org.apache.nifi.logging.ComponentLog;
+import org.apache.nifi.processors.standard.sql.RecordSqlWriter;
 import org.apache.nifi.provenance.ProvenanceEventType;
 import org.apache.nifi.reporting.InitializationException;
-import org.apache.nifi.schema.access.SchemaAccessUtils;
+import org.apache.nifi.serialization.RecordSetWriterFactory;
+import org.apache.nifi.serialization.record.MockCsvRecordWriter;
 import org.apache.nifi.serialization.record.MockRecordWriter;
+import org.apache.nifi.util.MockComponentLog;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunner;
 import org.apache.nifi.util.TestRunners;
+import org.apache.nifi.util.db.JdbcCommon.AvroConversionOptions;
 import org.apache.nifi.util.db.SimpleCommerceDataSet;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
-import java.io.ByteArrayInputStream;
-import java.io.File;
-import java.io.IOException;
-import java.nio.ByteBuffer;
+import java.io.ByteArrayOutputStream;
+import java.sql.Array;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
+import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.sql.Statement;
+import java.sql.Types;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-public class TestExecuteSQLRecord {
+class TestExecuteSQLRecord extends AbstractDatabaseConnectionServiceTest {
 
-    private final Logger LOGGER = LoggerFactory.getLogger(TestExecuteSQLRecord.class);
+    final static String QUERY_WITHOUT_EL = """
+            select
+              PER.ID as PersonId, PER.NAME as PersonName,
+              PER.CODE as PersonCode,
+              PRD.ID as ProductId,
+              PRD.NAME as ProductName,
+              PRD.CODE as ProductCode,
+              REL.ID as RelId,
+              REL.NAME as RelName,
+              REL.CODE as RelCode,
+              ROW_NUMBER() OVER () as rownr
+            from
+              persons PER,
+              products PRD,
+              relationships REL
+            where
+              PER.ID = 10
+            """;
 
-    final static String DB_LOCATION = "target/db";
+    private static final int BATCH_SIZE = 250;
 
-    final static String QUERY_WITH_EL = "select "
-            + "  PER.ID as PersonId, PER.NAME as PersonName, PER.CODE as PersonCode"
-            + ", PRD.ID as ProductId,PRD.NAME as ProductName,PRD.CODE as ProductCode"
-            + ", REL.ID as RelId,    REL.NAME as RelName,    REL.CODE as RelCode"
-            + ", ROW_NUMBER() OVER () as rownr "
-            + " from persons PER, products PRD, relationships REL"
-            + " where PER.ID = ${person.id}";
+    private static final int FRAGMENT_SIZE = 50;
 
-    final static String QUERY_WITHOUT_EL = "select "
-            + "  PER.ID as PersonId, PER.NAME as PersonName, PER.CODE as PersonCode"
-            + ", PRD.ID as ProductId,PRD.NAME as ProductName,PRD.CODE as ProductCode"
-            + ", REL.ID as RelId,    REL.NAME as RelName,    REL.CODE as RelCode"
-            + ", ROW_NUMBER() OVER () as rownr "
-            + " from persons PER, products PRD, relationships REL"
-            + " where PER.ID = 10";
-
-    final static String QUERY_WITHOUT_EL_WITH_PARAMS = "select "
-            + "  PER.ID as PersonId, PER.NAME as PersonName, PER.CODE as PersonCode"
-            + ", PRD.ID as ProductId,PRD.NAME as ProductName,PRD.CODE as ProductCode"
-            + ", REL.ID as RelId,    REL.NAME as RelName,    REL.CODE as RelCode"
-            + ", ROW_NUMBER() OVER () as rownr "
-            + " from persons PER, products PRD, relationships REL"
-            + " where PER.ID < ? AND REL.ID < ?";
-
-
-    @BeforeAll
-    public static void setupClass() {
-        System.setProperty("derby.stream.error.file", "target/derby.log");
-    }
-
-    @AfterAll
-    public static void cleanupClass() {
-        System.clearProperty("derby.stream.error.file");
-    }
+    private static final int LAST_BATCH_RECORD_INDEX = 49;
 
     private TestRunner runner;
 
     @BeforeEach
     public void setup() throws InitializationException {
-        final DBCPService dbcp = new DBCPServiceSimpleImpl("derby");
-        final Map<String, String> dbcpProperties = new HashMap<>();
+        runner = newTestRunner(ExecuteSQLRecord.class);
+    }
 
-        runner = TestRunners.newTestRunner(ExecuteSQLRecord.class);
-        runner.addControllerService("dbcp", dbcp, dbcpProperties);
-        runner.enableControllerService(dbcp);
-        runner.setProperty(AbstractExecuteSQL.DBCP_SERVICE, "dbcp");
+    @AfterEach
+    void dropTables() {
+        final List<String> tables = List.of(
+                "TEST_DROP_TABLE",
+                "TEST_TRUNCATE_TABLE",
+                "TEST_NULL_INT"
+        );
+
+        for (final String table : tables) {
+            try (
+                    Connection connection = getConnection();
+                    Statement statement = connection.createStatement()
+            ) {
+                statement.execute("DROP TABLE %s".formatted(table));
+
+            } catch (final SQLException ignored) {
+
+            }
+        }
     }
 
     @Test
@@ -147,59 +139,73 @@ public class TestExecuteSQLRecord {
     }
 
     @Test
-    public void testNoIncomingConnectionAndNoQuery() throws InitializationException {
+    public void testNoIncomingConnectionAndNoQuery() {
         runner.setIncomingConnection(false);
-        assertThrows(AssertionError.class, () -> {
-            runner.run();
-        });
+        assertThrows(AssertionError.class, () -> runner.run());
     }
 
     @Test
-    public void testNoIncomingConnection() throws ClassNotFoundException, SQLException, InitializationException, IOException {
+    public void testNoIncomingConnection() throws SQLException, InitializationException {
         runner.setIncomingConnection(false);
         invokeOnTriggerRecords(null, QUERY_WITHOUT_EL, false, null, true);
-        assertEquals(ProvenanceEventType.RECEIVE, runner.getProvenanceEvents().get(0).getEventType());
+        assertEquals(ProvenanceEventType.RECEIVE, runner.getProvenanceEvents().getFirst().getEventType());
     }
 
     @Test
-    public void testSelectQueryInFlowFile() throws InitializationException, ClassNotFoundException, SQLException, IOException {
+    public void testSelectQueryInFlowFile() throws InitializationException, SQLException {
         invokeOnTriggerRecords(null, QUERY_WITHOUT_EL, true, null, false);
         assertEquals(ProvenanceEventType.FORK, runner.getProvenanceEvents().get(0).getEventType());
         assertEquals(ProvenanceEventType.FETCH, runner.getProvenanceEvents().get(1).getEventType());
     }
 
     @Test
-    public void testAutoCommitFalse() throws InitializationException, ClassNotFoundException, SQLException, IOException {
+    public void testAutoCommitFalse() throws InitializationException, SQLException {
         runner.setProperty(ExecuteSQL.AUTO_COMMIT, "false");
         invokeOnTriggerRecords(null, QUERY_WITHOUT_EL, true, null, false);
     }
 
     @Test
-    public void testAutoCommitTrue() throws InitializationException, ClassNotFoundException, SQLException, IOException {
+    public void testAutoCommitTrue() throws InitializationException, SQLException {
         runner.setProperty(ExecuteSQL.AUTO_COMMIT, "true");
         invokeOnTriggerRecords(null, QUERY_WITHOUT_EL, true, null, false);
     }
 
     @Test
+    public void testFlowFileAttributeResolution() throws InitializationException, SQLException {
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+
+        for (int i = 0; i < 2; i++) {
+            executeSql("insert into TEST_NULL_INT (id, val1, val2) VALUES (" + i + ", 1, 1)");
+        }
+
+        MockRecordWriter recordWriter = MockCsvRecordWriter.builder()
+                .withHeader("foo|bar|baz")
+                .quoteValues(false)
+                .withSeparator(attr -> attr.getOrDefault("csv.separator", ","))
+                .build();
+
+        runner.addControllerService("writer", recordWriter);
+        runner.setProperty(ExecuteSQLRecord.RECORD_WRITER_FACTORY, "writer");
+        runner.enableControllerService(recordWriter);
+
+        runner.setIncomingConnection(true);
+        runner.setProperty(ExecuteSQLRecord.SQL_QUERY, "SELECT * FROM TEST_NULL_INT");
+        runner.enqueue("", Map.of("csv.separator", "|"));
+        runner.run();
+
+        runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 1);
+        MockFlowFile out = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
+        out.assertContentEquals("""
+                foo|bar|baz
+                0|1|1
+                1|1|1
+                """);
+    }
+
+    @Test
     public void testWithOutputBatching() throws InitializationException, SQLException {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
-
-        for (int i = 0; i < 1000; i++) {
-            stmt.execute("insert into TEST_NULL_INT (id, val1, val2) VALUES (" + i + ", 1, 1)");
-        }
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        insertRecords();
 
         MockRecordWriter recordWriter = new MockRecordWriter(null, true, -1);
         runner.addControllerService("writer", recordWriter);
@@ -212,44 +218,28 @@ public class TestExecuteSQLRecord {
         runner.setProperty(ExecuteSQLRecord.SQL_QUERY, "SELECT * FROM TEST_NULL_INT");
         runner.run();
 
-        runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 200);
+        runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, FRAGMENT_SIZE);
         runner.assertAllFlowFilesContainAttribute(ExecuteSQLRecord.REL_SUCCESS, FragmentAttributes.FRAGMENT_INDEX.key());
         runner.assertAllFlowFilesContainAttribute(ExecuteSQLRecord.REL_SUCCESS, FragmentAttributes.FRAGMENT_ID.key());
 
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
 
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "5");
         firstFlowFile.assertAttributeNotExists(FragmentAttributes.FRAGMENT_COUNT.key());
         firstFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "0");
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULTSET_INDEX, "0");
 
-        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(199);
+        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(LAST_BATCH_RECORD_INDEX);
 
         lastFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "5");
-        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "199");
+        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), Integer.toString(LAST_BATCH_RECORD_INDEX));
         lastFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULTSET_INDEX, "0");
     }
 
     @Test
     public void testWithOutputBatchingAndIncomingFlowFile() throws InitializationException, SQLException {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
-
-        for (int i = 0; i < 1000; i++) {
-            stmt.execute("insert into TEST_NULL_INT (id, val1, val2) VALUES (" + i + ", 1, 1)");
-        }
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        insertRecords();
 
         Map<String, String> attrMap = new HashMap<>();
         String testAttrName = "attr1";
@@ -267,21 +257,21 @@ public class TestExecuteSQLRecord {
         MockFlowFile inputFlowFile = runner.enqueue("SELECT * FROM TEST_NULL_INT", attrMap);
         runner.run();
 
-        runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 200);
+        runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, FRAGMENT_SIZE);
         runner.assertAllFlowFilesContainAttribute(ExecuteSQLRecord.REL_SUCCESS, FragmentAttributes.FRAGMENT_INDEX.key());
         runner.assertAllFlowFilesContainAttribute(ExecuteSQLRecord.REL_SUCCESS, FragmentAttributes.FRAGMENT_ID.key());
 
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
 
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "5");
         firstFlowFile.assertAttributeNotExists(FragmentAttributes.FRAGMENT_COUNT.key());
         firstFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "0");
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULTSET_INDEX, "0");
 
-        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(199);
+        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(LAST_BATCH_RECORD_INDEX);
 
         lastFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "5");
-        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "199");
+        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), Integer.toString(LAST_BATCH_RECORD_INDEX));
         lastFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULTSET_INDEX, "0");
         lastFlowFile.assertAttributeEquals(testAttrName, testAttrValue);
         lastFlowFile.assertAttributeEquals(AbstractExecuteSQL.INPUT_FLOWFILE_UUID, inputFlowFile.getAttribute(CoreAttributes.UUID.key()));
@@ -289,27 +279,14 @@ public class TestExecuteSQLRecord {
 
     @Test
     public void testWithOutputBatchingLastBatchFails() throws InitializationException, SQLException {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 varchar(50), constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 varchar(50), constraint my_pk primary key (id))");
 
         // Insert some valid numeric values (for TO_NUMBER call later)
         for (int i = 0; i < 11; i++) {
-            stmt.execute("insert into TEST_NULL_INT (id, val1) VALUES (" + i + ", '" + i + "')");
+            executeSql("insert into TEST_NULL_INT (id, val1) VALUES (" + i + ", '" + i + "')");
         }
         // Insert invalid numeric value
-        stmt.execute("insert into TEST_NULL_INT (id, val1) VALUES (100, 'abc')");
+        executeSql("insert into TEST_NULL_INT (id, val1) VALUES (100, 'abc')");
 
         Map<String, String> attrMap = new HashMap<>();
         String testAttrName = "attr1";
@@ -332,24 +309,8 @@ public class TestExecuteSQLRecord {
 
     @Test
     public void testMaxRowsPerFlowFile() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
-
-        for (int i = 0; i < 1000; i++) {
-            stmt.execute("insert into TEST_NULL_INT (id, val1, val2) VALUES (" + i + ", 1, 1)");
-        }
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        insertRecords();
 
         runner.setIncomingConnection(false);
         runner.setProperty(AbstractExecuteSQL.MAX_ROWS_PER_FLOW_FILE, "5");
@@ -361,13 +322,13 @@ public class TestExecuteSQLRecord {
         runner.enableControllerService(recordWriter);
         runner.run();
 
-        runner.assertAllFlowFilesTransferred(AbstractExecuteSQL.REL_SUCCESS, 200);
+        runner.assertAllFlowFilesTransferred(AbstractExecuteSQL.REL_SUCCESS, FRAGMENT_SIZE);
         runner.assertTransferCount(AbstractExecuteSQL.REL_FAILURE, 0);
         runner.assertAllFlowFilesContainAttribute(AbstractExecuteSQL.REL_SUCCESS, FragmentAttributes.FRAGMENT_INDEX.key());
         runner.assertAllFlowFilesContainAttribute(AbstractExecuteSQL.REL_SUCCESS, FragmentAttributes.FRAGMENT_ID.key());
         runner.assertAllFlowFilesContainAttribute(AbstractExecuteSQL.REL_SUCCESS, FragmentAttributes.FRAGMENT_COUNT.key());
 
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).getFirst();
 
         firstFlowFile.assertAttributeEquals(AbstractExecuteSQL.RESULT_ROW_COUNT, "5");
         firstFlowFile.assertAttributeEquals("record.count", "5");
@@ -375,31 +336,18 @@ public class TestExecuteSQLRecord {
         firstFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "0");
         firstFlowFile.assertAttributeEquals(AbstractExecuteSQL.RESULTSET_INDEX, "0");
 
-        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).get(199);
+        MockFlowFile lastFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).get(LAST_BATCH_RECORD_INDEX);
 
         lastFlowFile.assertAttributeEquals(AbstractExecuteSQL.RESULT_ROW_COUNT, "5");
         lastFlowFile.assertAttributeEquals("record.count", "5");
         lastFlowFile.assertAttributeEquals(CoreAttributes.MIME_TYPE.key(), "text/plain"); // MockRecordWriter has text/plain MIME type
-        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), "199");
+        lastFlowFile.assertAttributeEquals(FragmentAttributes.FRAGMENT_INDEX.key(), Integer.toString(LAST_BATCH_RECORD_INDEX));
         lastFlowFile.assertAttributeEquals(AbstractExecuteSQL.RESULTSET_INDEX, "0");
     }
 
     @Test
     public void testInsertStatementCreatesFlowFile() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
 
         runner.setIncomingConnection(false);
         runner.setProperty(AbstractExecuteSQL.SQL_QUERY, "insert into TEST_NULL_INT (id, val1, val2) VALUES (0, NULL, 1)");
@@ -410,89 +358,12 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(AbstractExecuteSQL.REL_SUCCESS, 1);
-        runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).get(0).assertAttributeEquals(AbstractExecuteSQL.RESULT_ROW_COUNT, "0");
-    }
-
-    @Test
-    public void testWriteLOBsToAvro() throws Exception {
-        final DBCPService dbcp = new DBCPServiceSimpleImpl("h2");
-        final Map<String, String> dbcpProperties = new HashMap<>();
-
-        runner = TestRunners.newTestRunner(ExecuteSQLRecord.class);
-        runner.addControllerService("dbcp", dbcp, dbcpProperties);
-        runner.enableControllerService(dbcp);
-        runner.setProperty(AbstractExecuteSQL.DBCP_SERVICE, "dbcp");
-
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, image blob(1K), words clob(1K), "
-                + "natwords nclob(1K), constraint my_pk primary key (id))");
-        stmt.execute("insert into TEST_NULL_INT (id, val1, val2, image, words, natwords) VALUES (0, NULL, 1, CAST (X'DEADBEEF' AS BLOB), "
-                + "CAST ('Hello World' AS CLOB), CAST ('I am an NCLOB' AS NCLOB))");
-
-        runner.setIncomingConnection(false);
-        runner.setProperty(AbstractExecuteSQL.SQL_QUERY, "select * from TEST_NULL_INT");
-        AvroRecordSetWriter recordWriter = new AvroRecordSetWriter();
-        runner.addControllerService("writer", recordWriter);
-        runner.setProperty(recordWriter, SchemaAccessUtils.SCHEMA_ACCESS_STRATEGY, SchemaAccessUtils.INHERIT_RECORD_SCHEMA);
-        runner.setProperty(ExecuteSQLRecord.RECORD_WRITER_FACTORY, "writer");
-        runner.enableControllerService(recordWriter);
-        runner.run();
-
-        runner.assertAllFlowFilesTransferred(AbstractExecuteSQL.REL_SUCCESS, 1);
-        MockFlowFile flowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).get(0);
-        flowFile.assertAttributeEquals(AbstractExecuteSQL.RESULT_ROW_COUNT, "1");
-
-        ByteArrayInputStream bais = new ByteArrayInputStream(flowFile.toByteArray());
-        try (DataFileStream<GenericRecord> dataFileStream = new DataFileStream<>(bais, new GenericDatumReader<>())) {
-            final Schema avroSchema = dataFileStream.getSchema();
-            GenericData.setStringType(avroSchema, GenericData.StringType.String);
-            final GenericRecord avroRecord = dataFileStream.next();
-
-            Object imageObj = avroRecord.get("IMAGE");
-            assertNotNull(imageObj);
-            assertInstanceOf(ByteBuffer.class, imageObj);
-            assertArrayEquals(new byte[] {(byte) 0xDE, (byte) 0xAD, (byte) 0xBE, (byte) 0xEF}, ((ByteBuffer) imageObj).array());
-
-            Object wordsObj = avroRecord.get("WORDS");
-            assertNotNull(wordsObj);
-            assertInstanceOf(Utf8.class, wordsObj);
-            assertEquals("Hello World", wordsObj.toString());
-
-            Object natwordsObj = avroRecord.get("NATWORDS");
-            assertNotNull(natwordsObj);
-            assertInstanceOf(Utf8.class, natwordsObj);
-            assertEquals("I am an NCLOB", natwordsObj.toString());
-        }
+        runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS).getFirst().assertAttributeEquals(AbstractExecuteSQL.RESULT_ROW_COUNT, "0");
     }
 
     @Test
     public void testNoRowsStatementCreatesEmptyFlowFile() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
 
         runner.setIncomingConnection(true);
         runner.setProperty(ExecuteSQLRecord.SQL_QUERY, "select * from TEST_NULL_INT");
@@ -504,27 +375,14 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 1);
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "0");
         firstFlowFile.assertContentEquals("");
     }
 
     @Test
     public void testNoResultCreatesEmptyFlowFile() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
 
         runner.setIncomingConnection(true);
         runner.setProperty(ExecuteSQLRecord.SQL_QUERY, "drop table TEST_NULL_INT");
@@ -536,27 +394,14 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 1);
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "0");
         firstFlowFile.assertContentEquals("");
     }
 
     @Test
     public void testWithSqlException() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NO_ROWS");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NO_ROWS (id integer)");
+        executeSql("create table TEST_NO_ROWS (id integer)");
 
         runner.setIncomingConnection(false);
         // Try a valid SQL statement that will generate an error (val1 does not exist, e.g.)
@@ -574,24 +419,15 @@ public class TestExecuteSQLRecord {
     }
 
     public void invokeOnTriggerRecords(final Integer queryTimeout, final String query, final boolean incomingFlowFile, final Map<String, String> attrs, final boolean setQueryProperty)
-            throws InitializationException, ClassNotFoundException, SQLException, IOException {
+            throws InitializationException, SQLException {
 
         if (queryTimeout != null) {
-            runner.setProperty(AbstractExecuteSQL.QUERY_TIMEOUT, queryTimeout.toString() + " secs");
+            runner.setProperty(AbstractExecuteSQL.QUERY_TIMEOUT, queryTimeout + " secs");
         }
 
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
         // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        SimpleCommerceDataSet.loadTestData2Database(con, 100, 200, 100);
-        LOGGER.info("test data loaded");
-
-        //commit loaded data if auto-commit is dissabled
-        if (!con.getAutoCommit()) {
-            con.commit();
+        try (Connection con = getConnection()) {
+            SimpleCommerceDataSet.loadTestData2Database(con, 100, 200, 100);
         }
 
         // ResultSet size will be 1x200x100 = 20 000 rows
@@ -625,9 +461,9 @@ public class TestExecuteSQLRecord {
         runner.assertAllFlowFilesContainAttribute(AbstractExecuteSQL.REL_SUCCESS, AbstractExecuteSQL.RESULT_ROW_COUNT);
 
         final List<MockFlowFile> flowfiles = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_SUCCESS);
-        final long executionTime = Long.parseLong(flowfiles.get(0).getAttribute(AbstractExecuteSQL.RESULT_QUERY_EXECUTION_TIME));
-        final long fetchTime = Long.parseLong(flowfiles.get(0).getAttribute(AbstractExecuteSQL.RESULT_QUERY_FETCH_TIME));
-        final long durationTime = Long.parseLong(flowfiles.get(0).getAttribute(AbstractExecuteSQL.RESULT_QUERY_DURATION));
+        final long executionTime = Long.parseLong(flowfiles.getFirst().getAttribute(AbstractExecuteSQL.RESULT_QUERY_EXECUTION_TIME));
+        final long fetchTime = Long.parseLong(flowfiles.getFirst().getAttribute(AbstractExecuteSQL.RESULT_QUERY_FETCH_TIME));
+        final long durationTime = Long.parseLong(flowfiles.getFirst().getAttribute(AbstractExecuteSQL.RESULT_QUERY_DURATION));
         assertEquals(durationTime, fetchTime + executionTime);
     }
 
@@ -663,27 +499,14 @@ public class TestExecuteSQLRecord {
         runner.assertTransferCount(AbstractExecuteSQL.REL_SUCCESS, 0);
 
         // Assert exception message has been put to flow file attribute
-        MockFlowFile failedFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_FAILURE).get(0);
+        MockFlowFile failedFlowFile = runner.getFlowFilesForRelationship(AbstractExecuteSQL.REL_FAILURE).getFirst();
         assertEquals("java.sql.SQLException: test execute statement failed", failedFlowFile.getAttribute(AbstractExecuteSQL.RESULT_ERROR_MESSAGE));
     }
 
     @Test
     public void testPreQuery() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
-        stmt.execute("insert into TEST_NULL_INT values(1,2,3)");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("insert into TEST_NULL_INT values(1,2,3)");
 
         runner.setIncomingConnection(true);
         runner.setProperty(ExecuteSQLRecord.SQL_PRE_QUERY, "CALL SYSCS_UTIL.SYSCS_SET_RUNTIMESTATISTICS(1);CALL SYSCS_UTIL.SYSCS_SET_STATISTICS_TIMING(1)");
@@ -696,27 +519,14 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 1);
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "1");
     }
 
     @Test
     public void testPostQuery() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
-        stmt.execute("insert into TEST_NULL_INT values(1,2,3)");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("insert into TEST_NULL_INT values(1,2,3)");
 
         runner.setIncomingConnection(true);
         runner.setProperty(ExecuteSQLRecord.SQL_PRE_QUERY, "CALL SYSCS_UTIL.SYSCS_SET_RUNTIMESTATISTICS(1);CALL SYSCS_UTIL.SYSCS_SET_STATISTICS_TIMING(1)");
@@ -730,26 +540,13 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_SUCCESS, 1);
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_SUCCESS).getFirst();
         firstFlowFile.assertAttributeEquals(ExecuteSQLRecord.RESULT_ROW_COUNT, "1");
     }
 
     @Test
     public void testPreQueryFail() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
 
         runner.setIncomingConnection(true);
         // Simulate failure by not provide parameter
@@ -767,20 +564,7 @@ public class TestExecuteSQLRecord {
 
     @Test
     public void testPostQueryFail() throws Exception {
-        // remove previous test database, if any
-        final File dbLocation = new File(DB_LOCATION);
-        dbLocation.delete();
-
-        // load test data to database
-        final Connection con = ((DBCPService) runner.getControllerService("dbcp")).getConnection();
-        Statement stmt = con.createStatement();
-
-        try {
-            stmt.execute("drop table TEST_NULL_INT");
-        } catch (final SQLException ignored) {
-        }
-
-        stmt.execute("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
+        executeSql("create table TEST_NULL_INT (id integer not null, val1 integer, val2 integer, constraint my_pk primary key (id))");
 
         runner.setIncomingConnection(true);
         runner.setProperty(ExecuteSQLRecord.SQL_PRE_QUERY, "CALL SYSCS_UTIL.SYSCS_SET_RUNTIMESTATISTICS(1);CALL SYSCS_UTIL.SYSCS_SET_STATISTICS_TIMING(1)");
@@ -795,43 +579,51 @@ public class TestExecuteSQLRecord {
         runner.run();
 
         runner.assertAllFlowFilesTransferred(ExecuteSQLRecord.REL_FAILURE, 1);
-        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_FAILURE).get(0);
+        MockFlowFile firstFlowFile = runner.getFlowFilesForRelationship(ExecuteSQLRecord.REL_FAILURE).getFirst();
         firstFlowFile.assertContentEquals("test");
     }
 
+    @Test
+    public void testArrayOfStringsInference() throws Exception {
+        final ResultSetMetaData meta = mock(ResultSetMetaData.class);
+        when(meta.getColumnCount()).thenReturn(1);
+        when(meta.getColumnLabel(1)).thenReturn("test");
+        when(meta.getColumnName(1)).thenReturn("test");
+        when(meta.getColumnType(1)).thenReturn(Types.ARRAY);
+        when(meta.getTableName(1)).thenReturn("");
 
-    /**
-     * Simple implementation only for ExecuteSQL processor testing.
-     */
-    class DBCPServiceSimpleImpl extends AbstractControllerService implements DBCPService {
+        final ResultSet rs = mock(ResultSet.class);
+        when(rs.getMetaData()).thenReturn(meta);
+        when(rs.next()).thenReturn(true, false);
 
-        private final String type;
+        final Array array = mock(Array.class);
+        when(array.getArray()).thenReturn(new String[] {"test"});
+        when(rs.getArray(1)).thenReturn(array);
+        when(rs.getObject(1)).thenReturn(array);
+        when(rs.getObject("test")).thenReturn(array);
 
-        public DBCPServiceSimpleImpl(String type) {
-            this.type = type;
+        final TestRunner localRunner = TestRunners.newTestRunner(ExecuteSQLRecord.class);
+        final RecordSetWriterFactory writerFactory = new JsonRecordSetWriter();
+        localRunner.addControllerService("writer", writerFactory);
+        localRunner.enableControllerService(writerFactory);
 
-        }
+        final RecordSqlWriter sqlWriter = new RecordSqlWriter(writerFactory, AvroConversionOptions.builder().useLogicalTypes(false).build(), 0, Map.of());
+        final ByteArrayOutputStream out = new ByteArrayOutputStream();
+        final ComponentLog log = new MockComponentLog("test", sqlWriter);
+        sqlWriter.writeResultSet(rs, out, log, null);
+        final String json = out.toString();
+        assertTrue(json.contains("\"test\":[\"test\"]"), "Expected JSON to contain array of strings: " + json);
+    }
 
-        @Override
-        public String getIdentifier() {
-            return "dbcp";
-        }
 
-        @Override
-        public Connection getConnection() throws ProcessException {
-            try {
-                final Connection con;
-                if ("h2".equalsIgnoreCase(type)) {
-                    con = DriverManager.getConnection("jdbc:h2:file:" + "./target/testdb7");
-                } else {
-                    Class.forName("org.apache.derby.jdbc.EmbeddedDriver");
-                    con = DriverManager.getConnection("jdbc:derby:" + DB_LOCATION + ";create=true");
-                }
-                return con;
-            } catch (final Exception e) {
-                throw new ProcessException("getConnection failed: " + e);
+    private void insertRecords() throws SQLException {
+        try (
+                Connection connection = getConnection();
+                Statement statement = connection.createStatement()
+        ) {
+            for (int i = 0; i < BATCH_SIZE; i++) {
+                statement.execute("insert into TEST_NULL_INT (id, val1, val2) VALUES (%d, 1, 1)".formatted(i));
             }
         }
     }
-
 }
