@@ -18,8 +18,8 @@ package org.apache.nifi.web;
 
 import io.prometheus.client.CollectorRegistry;
 import jakarta.ws.rs.WebApplicationException;
-import jakarta.ws.rs.core.Response;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.Strings;
 import org.apache.nifi.action.Action;
 import org.apache.nifi.action.Component;
 import org.apache.nifi.action.FlowChangeAction;
@@ -54,6 +54,7 @@ import org.apache.nifi.bundle.Bundle;
 import org.apache.nifi.bundle.BundleCoordinate;
 import org.apache.nifi.c2.protocol.component.api.ControllerServiceDefinition;
 import org.apache.nifi.c2.protocol.component.api.FlowAnalysisRuleDefinition;
+import org.apache.nifi.c2.protocol.component.api.FlowRegistryClientDefinition;
 import org.apache.nifi.c2.protocol.component.api.ParameterProviderDefinition;
 import org.apache.nifi.c2.protocol.component.api.ProcessorDefinition;
 import org.apache.nifi.c2.protocol.component.api.ReportingTaskDefinition;
@@ -187,6 +188,7 @@ import org.apache.nifi.registry.flow.RegisterAction;
 import org.apache.nifi.registry.flow.RegisteredFlow;
 import org.apache.nifi.registry.flow.RegisteredFlowSnapshot;
 import org.apache.nifi.registry.flow.RegisteredFlowSnapshotMetadata;
+import org.apache.nifi.registry.flow.VerifiableFlowRegistryClient;
 import org.apache.nifi.registry.flow.VersionControlInformation;
 import org.apache.nifi.registry.flow.VersionedFlowState;
 import org.apache.nifi.registry.flow.diff.ComparableDataFlow;
@@ -324,6 +326,8 @@ import org.apache.nifi.web.api.entity.ActivateControllerServicesEntity;
 import org.apache.nifi.web.api.entity.AffectedComponentEntity;
 import org.apache.nifi.web.api.entity.AssetEntity;
 import org.apache.nifi.web.api.entity.BulletinEntity;
+import org.apache.nifi.web.api.entity.ClearBulletinsResultEntity;
+import org.apache.nifi.web.api.entity.ClearBulletinsForGroupResultsEntity;
 import org.apache.nifi.web.api.entity.ComponentReferenceEntity;
 import org.apache.nifi.web.api.entity.ComponentValidationResultEntity;
 import org.apache.nifi.web.api.entity.ConfigurationAnalysisEntity;
@@ -427,6 +431,7 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -450,8 +455,6 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import static org.apache.commons.lang3.StringUtils.containsIgnoreCase;
 
 /**
  * Implementation of NiFiServiceFacade that performs revision checking.
@@ -667,6 +670,11 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
+    public void verifyCanVerifyFlowRegistryClientConfig(final String registryClientId) {
+        flowRegistryDAO.verifyConfigVerification(registryClientId);
+    }
+
+    @Override
     public void verifyDeleteProcessor(final String processorId) {
         processorDAO.verifyDelete(processorId);
     }
@@ -696,13 +704,13 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         List<RemoteProcessGroup> allRemoteProcessGroups = processGroupDAO.getProcessGroup(processGroupId).findAllRemoteProcessGroups();
 
         allRemoteProcessGroups.stream()
-            .map(remoteProcessGroup -> {
-                final RemoteProcessGroupDTO dto = new RemoteProcessGroupDTO();
-                dto.setId(remoteProcessGroup.getIdentifier());
-                dto.setTransmitting(shouldTransmit);
-                return dto;
-            })
-            .forEach(this::verifyUpdateRemoteProcessGroup);
+                .map(remoteProcessGroup -> {
+                    final RemoteProcessGroupDTO dto = new RemoteProcessGroupDTO();
+                    dto.setId(remoteProcessGroup.getIdentifier());
+                    dto.setTransmitting(shouldTransmit);
+                    return dto;
+                })
+                .forEach(this::verifyUpdateRemoteProcessGroup);
     }
 
     @Override
@@ -753,6 +761,13 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public void verifyDeleteControllerService(final String controllerServiceId) {
         controllerServiceDAO.verifyDelete(controllerServiceId);
+    }
+
+    @Override
+    public void reloadControllerService(final String controllerServiceId) {
+        final ControllerServiceNode controllerServiceNode = controllerServiceDAO.getControllerService(controllerServiceId);
+        controllerServiceNode.verifyCanUpdate();
+        controllerServiceNode.reloadAdditionalResourcesIfNecessary();
     }
 
     @Override
@@ -876,8 +891,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
-    public void clearFlowAnalysisRuleState(String flowAnalysisRuleId) {
-        flowAnalysisRuleDAO.clearState(flowAnalysisRuleId);
+    public ComponentStateDTO clearFlowAnalysisRuleState(final String flowAnalysisRuleId, final ComponentStateDTO componentStateDTO) {
+        flowAnalysisRuleDAO.clearState(flowAnalysisRuleId, componentStateDTO);
+        return this.getFlowAnalysisRuleState(flowAnalysisRuleId);
     }
 
     @Override
@@ -979,6 +995,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                     final Set<AccessPolicySummaryEntity> policyEntities = policies.stream().map(this::createAccessPolicySummaryEntity).collect(Collectors.toSet());
                     return dtoFactory.createUserDto(user, tenantEntities, policyEntities);
                 });
+        logger.info("Tenant User [{}] updated by [{}]", userDTO.getIdentity(), NiFiUserUtils.getNiFiUserIdentity());
 
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(usersAuthorizable);
         return entityFactory.createUserEntity(snapshot.getComponent(), dtoFactory.createRevisionDTO(snapshot.getLastModification()), permissions);
@@ -997,6 +1014,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                     return dtoFactory.createUserGroupDto(userGroup, tenantEntities, policyEntities);
                 }
         );
+
+        logger.info("Tenant Group [{}] updated by [{}]", userGroupDTO.getIdentity(), NiFiUserUtils.getNiFiUserIdentity());
 
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(userGroupsAuthorizable);
         return entityFactory.createUserGroupEntity(snapshot.getComponent(), dtoFactory.createRevisionDTO(snapshot.getLastModification()), permissions);
@@ -1073,6 +1092,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
             return ((ControllerServiceNode) componentNode).getControllerServiceImplementation() instanceof VerifiableControllerService;
         } else if (componentNode instanceof ReportingTaskNode) {
             return ((ReportingTaskNode) componentNode).getReportingTask() instanceof VerifiableReportingTask;
+        } else if (componentNode instanceof FlowRegistryClientNode) {
+            return componentNode.getComponent() instanceof VerifiableFlowRegistryClient;
         } else {
             return false;
         }
@@ -1313,9 +1334,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         // get the component, ensure we have access to it, and perform the update request
         final ParameterContext parameterContext = parameterContextDAO.getParameterContext(parameterContextDto.getId());
         final RevisionUpdate<ParameterContextDTO> snapshot = updateComponent(revision,
-            parameterContext,
-            () -> parameterContextDAO.updateParameterContext(parameterContextDto),
-            context -> dtoFactory.createParameterContextDto(context, revisionManager, false, parameterContextDAO));
+                parameterContext,
+                () -> parameterContextDAO.updateParameterContext(parameterContextDto),
+                context -> dtoFactory.createParameterContextDto(context, revisionManager, false, parameterContextDAO));
 
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(parameterContext);
         final RevisionDTO revisionDto = dtoFactory.createRevisionDTO(snapshot.getLastModification());
@@ -1334,8 +1355,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final NiFiUser user = NiFiUserUtils.getNiFiUser();
 
         final Set<ParameterContextEntity> entities = parameterContextDAO.getParameterContexts().stream()
-            .map(context -> createParameterContextEntity(context, false, user, parameterContextDAO))
-            .collect(Collectors.toSet());
+                .map(context -> createParameterContextEntity(context, false, user, parameterContextDAO))
+                .collect(Collectors.toSet());
 
         return entities;
     }
@@ -1343,9 +1364,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public ParameterContext getParameterContextByName(final String parameterContextName, final NiFiUser user) {
         final ParameterContext parameterContext = parameterContextDAO.getParameterContexts().stream()
-            .filter(context -> context.getName().equals(parameterContextName))
-            .findAny()
-            .orElse(null);
+                .filter(context -> context.getName().equals(parameterContextName))
+                .findAny()
+                .orElse(null);
 
         if (parameterContext == null) {
             return null;
@@ -1383,9 +1404,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 .build();
         final Map<String, Parameter> parameters = new HashMap<>();
         parameterContextDto.getParameters().stream()
-            .map(ParameterEntity::getParameter)
-            .map(this::createParameter)
-            .forEach(param -> parameters.put(param.getDescriptor().getName(), param));
+                .map(ParameterEntity::getParameter)
+                .map(this::createParameter)
+                .forEach(param -> parameters.put(param.getDescriptor().getName(), param));
         updatedParameterContext.setParameters(parameters);
 
         final List<ComponentValidationResultEntity> validationResults = new ArrayList<>();
@@ -1438,7 +1459,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         List<Asset> assets = null;
         if (dtoValue == null && !referencesAsset && Boolean.TRUE.equals(dto.getValueRemoved())) {
             value = null;
-        } else if (referencesAsset)  {
+        } else if (referencesAsset) {
             assets = getAssets(referencedAssets);
             value = null;
         } else {
@@ -1446,14 +1467,14 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         }
 
         return new Parameter.Builder()
-            .name(dto.getName())
-            .description(dto.getDescription())
-            .sensitive(Boolean.TRUE.equals(dto.getSensitive()))
-            .value(value)
-            .referencedAssets(assets)
-            .parameterContextId(parameterContextId)
-            .provided(dto.getProvided())
-            .build();
+                .name(dto.getName())
+                .description(dto.getDescription())
+                .sensitive(Boolean.TRUE.equals(dto.getSensitive()))
+                .value(value)
+                .referencedAssets(assets)
+                .parameterContextId(parameterContextId)
+                .provided(dto.getProvided())
+                .build();
     }
 
     private List<Asset> getAssets(final List<AssetReferenceDTO> referencedAssets) {
@@ -1505,11 +1526,11 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final ParameterContext parameterContext = parameterContextDAO.getParameterContext(parameterContextId);
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(parameterContext);
         final ParameterContextDTO snapshot = deleteComponent(
-            revision,
-            parameterContext.getResource(),
-            () -> parameterContextDAO.deleteParameterContext(parameterContextId),
-            true,
-            dtoFactory.createParameterContextDto(parameterContext, revisionManager, false, parameterContextDAO));
+                revision,
+                parameterContext.getResource(),
+                () -> parameterContextDAO.deleteParameterContext(parameterContextId),
+                true,
+                dtoFactory.createParameterContextDto(parameterContext, revisionManager, false, parameterContextDAO));
 
         return entityFactory.createParameterContextEntity(snapshot, null, permissions);
 
@@ -1531,8 +1552,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final Set<ComponentNode> affectedComponents = new HashSet<>();
 
         componentFunction.apply(group).stream()
-            .filter(ComponentNode::isReferencingParameter)
-            .forEach(affectedComponents::add);
+                .filter(ComponentNode::isReferencingParameter)
+                .forEach(affectedComponents::add);
 
         return dtoFactory.createAffectedComponentEntities(affectedComponents, revisionManager);
     }
@@ -1623,7 +1644,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     private Set<AffectedComponentEntity> getComponentsAffectedByParameterContextUpdate(final ParameterContextDTO parameterContextDto, final boolean includeInactive) {
         final ProcessGroup rootGroup = processGroupDAO.getProcessGroup("root");
         final List<ProcessGroup> groupsReferencingParameterContext = rootGroup.findAllProcessGroups(
-            group -> isGroupAffectedByParameterContext(group, parameterContextDto.getId()));
+                group -> isGroupAffectedByParameterContext(group, parameterContextDto.getId()));
 
         setEffectiveParameterUpdates(parameterContextDto);
 
@@ -1822,6 +1843,21 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
+    public ProcessGroupEntity setVersionControlInformation(final Revision revision, final ProcessGroupDTO processGroupDTO, final RegisteredFlowSnapshot flowSnapshot) {
+        final ProcessGroup processGroupNode = processGroupDAO.getProcessGroup(processGroupDTO.getId());
+        final RevisionUpdate<ProcessGroupDTO> snapshot = updateComponent(revision,
+                processGroupNode,
+                () -> processGroupDAO.setVersionControlInformation(processGroupDTO, flowSnapshot),
+                processGroup -> dtoFactory.createProcessGroupDto(processGroup));
+
+        final PermissionsDTO permissions = dtoFactory.createPermissionsDto(processGroupNode);
+        final RevisionDTO updatedRevision = dtoFactory.createRevisionDTO(snapshot.getLastModification());
+        final ProcessGroupStatusDTO status = dtoFactory.createConciseProcessGroupStatusDto(controllerFacade.getProcessGroupStatus(processGroupNode.getIdentifier()));
+        final List<BulletinEntity> bulletinEntities = getProcessGroupBulletins(processGroupNode);
+        return entityFactory.createProcessGroupEntity(snapshot.getComponent(), updatedRevision, permissions, status, bulletinEntities);
+    }
+
+    @Override
     public void verifyUpdateProcessGroup(ProcessGroupDTO processGroupDTO) {
         if (processGroupDAO.hasProcessGroup(processGroupDTO.getId())) {
             processGroupDAO.verifyUpdate(processGroupDTO);
@@ -1965,13 +2001,30 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
+    public CountersDTO updateAllCounters() {
+        final List<Counter> resetCounters = controllerFacade.resetAllCounters();
+        final Set<CounterDTO> counterDTOs = new LinkedHashSet<>(resetCounters.size());
+
+        for (final Counter counter : resetCounters) {
+            counterDTOs.add(dtoFactory.createCounterDto(counter));
+        }
+
+        final CountersSnapshotDTO snapshotDto = dtoFactory.createCountersDto(counterDTOs);
+        final CountersDTO countersDto = new CountersDTO();
+        countersDto.setAggregateSnapshot(snapshotDto);
+
+        return countersDto;
+    }
+
+    @Override
     public void verifyCanClearProcessorState(final String processorId) {
         processorDAO.verifyClearState(processorId);
     }
 
     @Override
-    public void clearProcessorState(final String processorId) {
-        processorDAO.clearState(processorId);
+    public ComponentStateDTO clearProcessorState(final String processorId, final ComponentStateDTO componentStateDTO) {
+        processorDAO.clearState(processorId, componentStateDTO);
+        return this.getProcessorState(processorId);
     }
 
     @Override
@@ -1980,8 +2033,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
-    public void clearControllerServiceState(final String controllerServiceId) {
-        controllerServiceDAO.clearState(controllerServiceId);
+    public ComponentStateDTO clearControllerServiceState(final String controllerServiceId, final ComponentStateDTO componentStateDTO) {
+        controllerServiceDAO.clearState(controllerServiceId, componentStateDTO);
+        return this.getControllerServiceState(controllerServiceId);
     }
 
     @Override
@@ -1990,8 +2044,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
-    public void clearReportingTaskState(final String reportingTaskId) {
-        reportingTaskDAO.clearState(reportingTaskId);
+    public ComponentStateDTO clearReportingTaskState(final String reportingTaskId, final ComponentStateDTO componentStateDTO) {
+        reportingTaskDAO.clearState(reportingTaskId, componentStateDTO);
+        return this.getReportingTaskState(reportingTaskId);
     }
 
     @Override
@@ -2000,8 +2055,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
-    public void clearParameterProviderState(final String parameterProviderId) {
-        parameterProviderDAO.clearState(parameterProviderId);
+    public ComponentStateDTO clearParameterProviderState(final String parameterProviderId, final ComponentStateDTO componentStateDTO) {
+        parameterProviderDAO.clearState(parameterProviderId, componentStateDTO);
+        return this.getParameterProviderState(parameterProviderId);
     }
 
     @Override
@@ -2076,6 +2132,13 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
+    public void reloadProcessor(final String processorId) {
+        final ProcessorNode processorNode = processorDAO.getProcessor(processorId);
+        processorNode.verifyCanUpdate();
+        processorNode.reloadAdditionalResourcesIfNecessary();
+    }
+
+    @Override
     public LabelEntity deleteLabel(final Revision revision, final String labelId) {
         final Label label = labelDAO.getLabel(labelId);
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(label);
@@ -2121,6 +2184,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 false, // no user specific policies to remove
                 dtoFactory.createUserDto(user, userGroups, policyEntities));
 
+        logger.info("Tenant User [{}] deleted by [{}]", snapshot.getIdentity(), NiFiUserUtils.getNiFiUserIdentity());
+
         return entityFactory.createUserEntity(snapshot, null, permissions);
     }
 
@@ -2155,6 +2220,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 () -> userGroupDAO.deleteUserGroup(userGroupId),
                 false, // no user group specific policies to remove
                 dtoFactory.createUserGroupDto(userGroup, users, policyEntities));
+
+        logger.info("Tenant Group [{}] deleted by [{}]", snapshot.getIdentity(), NiFiUserUtils.getNiFiUserIdentity());
 
         return entityFactory.createUserGroupEntity(snapshot, null, permissions);
     }
@@ -2208,9 +2275,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     /**
      * Deletes a component using the Optimistic Locking Manager
      *
-     * @param revision     the current revision
-     * @param resource the resource being removed
-     * @param deleteAction the action that deletes the component via the appropriate DAO object
+     * @param revision        the current revision
+     * @param resource        the resource being removed
+     * @param deleteAction    the action that deletes the component via the appropriate DAO object
      * @param cleanUpPolicies whether or not the policies for this resource should be removed as well - not necessary when there are
      *                        no component specific policies or if the policies of the component are inherited
      * @return a dto that represents the new configuration
@@ -2517,7 +2584,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public BulletinEntity createBulletin(final BulletinDTO bulletinDTO, final Boolean canRead) {
         final Bulletin bulletin = BulletinFactory.createBulletin(bulletinDTO.getCategory(), bulletinDTO.getLevel(), bulletinDTO.getMessage());
         bulletinRepository.addBulletin(bulletin);
-        return entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), canRead);
+        return entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), canRead);
     }
 
     @Override
@@ -2556,6 +2623,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public UserEntity createUser(final Revision revision, final UserDTO userDTO) {
         final String creator = NiFiUserUtils.getNiFiUserIdentity();
         final User newUser = userDAO.createUser(userDTO);
+
+        logger.info("Tenant User [{}] created by [{}]", userDTO.getIdentity(), creator);
+
         final Set<TenantEntity> tenantEntities = userGroupDAO.getUserGroupsForUser(newUser.getIdentifier()).stream()
                 .map(g -> g.getIdentifier()).map(mapUserGroupIdToTenantEntity(false)).collect(Collectors.toSet());
         final Set<AccessPolicySummaryEntity> policyEntities = userGroupDAO.getAccessPoliciesForUser(newUser.getIdentifier()).stream()
@@ -2607,6 +2677,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final Set<AccessPolicySummaryEntity> policyEntities = userGroupDAO.getAccessPoliciesForUserGroup(newUserGroup.getIdentifier()).stream()
                 .map(ap -> createAccessPolicySummaryEntity(ap)).collect(Collectors.toSet());
         final UserGroupDTO newUserGroupDto = dtoFactory.createUserGroupDto(newUserGroup, tenantEntities, policyEntities);
+
+        logger.info("Tenant Group [{}] created by [{}]", userGroupDTO.getIdentity(), creator);
 
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(authorizableLookup.getTenant());
         return entityFactory.createUserGroupEntity(newUserGroupDto, dtoFactory.createRevisionDTO(new FlowModification(revision, creator)), permissions);
@@ -2807,10 +2879,10 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
             // Note that we do not compare the Registry ID here because there could be two registry clients
             // that point to the same server (one could point to localhost while another points to 127.0.0.1, for instance)..
             if (Objects.equals(vciDto.getBucketId(), vci.getBucketIdentifier())
-                && Objects.equals(vciDto.getFlowId(), vci.getFlowIdentifier())) {
+                    && Objects.equals(vciDto.getFlowId(), vci.getFlowIdentifier())) {
 
                 throw new IllegalStateException("Cannot import the specified Versioned Flow into the Process Group because doing so would cause a recursive dataflow. "
-                    + "If Process Group A contains Process Group B, then Process Group B is not allowed to contain the flow identified by Process Group A.");
+                        + "If Process Group A contains Process Group B, then Process Group B is not allowed to contain the flow identified by Process Group A.");
             }
         }
 
@@ -3025,8 +3097,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     /**
      * Finds the identifiers for all components referencing a ControllerService.
      *
-     * @param reference      ControllerServiceReference
-     * @param visited        ControllerServices we've already visited
+     * @param reference ControllerServiceReference
+     * @param visited   ControllerServices we've already visited
      */
     private void findControllerServiceReferencingComponentIdentifiers(final ControllerServiceReference reference, final Set<ControllerServiceNode> visited) {
         for (final ComponentNode component : reference.getReferencingComponents()) {
@@ -3179,15 +3251,15 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public Set<FlowRegistryClientEntity> getRegistryClients() {
         return flowRegistryDAO.getFlowRegistryClients().stream()
-            .map(this::createRegistryClientEntity)
-            .collect(Collectors.toSet());
+                .map(this::createRegistryClientEntity)
+                .collect(Collectors.toSet());
     }
 
     @Override
     public Set<FlowRegistryClientEntity> getRegistryClientsForUser() {
         return flowRegistryDAO.getFlowRegistryClientsForUser(FlowRegistryClientContextFactory.getContextForUser(NiFiUserUtils.getNiFiUser())).stream()
-            .map(this::createRegistryClientEntity)
-            .collect(Collectors.toSet());
+                .map(this::createRegistryClientEntity)
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -3488,6 +3560,18 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     @Override
+    public List<ConfigVerificationResultDTO> performFlowRegistryClientConfigVerification(final String registryClientId, final Map<String, String> properties, final Map<String, String> variables) {
+        return flowRegistryDAO.verifyConfiguration(registryClientId, properties, variables);
+    }
+
+    @Override
+    public ConfigurationAnalysisEntity analyzeFlowRegistryClientConfiguration(final String registryClientId, final Map<String, String> properties) {
+        final FlowRegistryClientNode registryClientNode = flowRegistryDAO.getFlowRegistryClient(registryClientId);
+        final ConfigurationAnalysisEntity configurationAnalysisEntity = analyzeConfiguration(registryClientNode, properties, null);
+        return configurationAnalysisEntity;
+    }
+
+    @Override
     public ParameterProviderEntity deleteParameterProvider(final Revision revision, final String parameterProviderId) {
         final ParameterProviderNode parameterProvider = parameterProviderDAO.getParameterProvider(parameterProviderId);
         final PermissionsDTO permissions = dtoFactory.createPermissionsDto(parameterProvider);
@@ -3546,17 +3630,18 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                             parameterEntity = currentParameterEntities.get(parameterName);
                             if (parameterEntity != null) {
                                 final ParameterDTO parameterDTO = parameterEntity.getParameter();
-                                // These three fields must be null in order for ParameterContextDAO to recognize this as a parameter deletion
+                                // These fields must be null in order for ParameterContextDAO to recognize this as a parameter deletion
                                 parameterDTO.setDescription(null);
                                 parameterDTO.setSensitive(null);
                                 parameterDTO.setValue(null);
+                                parameterDTO.setReferencedAssets(null);
                                 updatedParameterEntities.add(parameterEntity);
                             }
                         } else {
                             parameterEntity = dtoFactory.createParameterEntity(parameterContext, parameter, revisionManager, parameterContextDAO);
                             // Need to unmask in order to actually apply the value
                             if (parameterEntity.getParameter() != null && parameterEntity.getParameter().getSensitive() != null
-                                     && parameterEntity.getParameter().getSensitive()) {
+                                    && parameterEntity.getParameter().getSensitive()) {
                                 parameterEntity.getParameter().setValue(parameter.getValue());
                             }
                             updatedParameterEntities.add(parameterEntity);
@@ -3765,8 +3850,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<ConnectionEntity> getConnections(final String groupId) {
         final Set<Connection> connections = connectionDAO.getConnections(groupId);
         return connections.stream()
-            .map(connection -> createConnectionEntity(connection))
-            .collect(Collectors.toSet());
+                .map(connection -> createConnectionEntity(connection))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -3841,16 +3926,16 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final Set<ProcessorNode> processors = processorDAO.getProcessors(groupId, includeDescendants);
         final NiFiUser user = NiFiUserUtils.getNiFiUser();
         return processors.stream()
-            .map(processor -> createProcessorEntity(processor, user))
-            .collect(Collectors.toSet());
+                .map(processor -> createProcessorEntity(processor, user))
+                .collect(Collectors.toSet());
     }
 
     @Override
     public ProcessorsRunStatusDetailsEntity getProcessorsRunStatusDetails(final Set<String> processorIds, final NiFiUser user) {
         final List<ProcessorRunStatusDetailsEntity> runStatusDetails = processorIds.stream()
-            .map(processorDAO::getProcessor)
-            .map(processor -> createRunStatusDetailsEntity(processor, user))
-            .collect(Collectors.toList());
+                .map(processorDAO::getProcessor)
+                .map(processor -> createRunStatusDetailsEntity(processor, user))
+                .collect(Collectors.toList());
 
         final ProcessorsRunStatusDetailsEntity entity = new ProcessorsRunStatusDetailsEntity();
         entity.setRunStatusDetails(runStatusDetails);
@@ -3899,6 +3984,15 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public Set<DocumentedTypeDTO> getFlowRegistryTypes() {
         return controllerFacade.getFlowRegistryTypes();
+    }
+
+    @Override
+    public FlowRegistryClientDefinition getFlowRegistryClientDefinition(String group, String artifact, String version, String type) {
+        final FlowRegistryClientDefinition flowRegistryClientDefinition = controllerFacade.getFlowRegistryClientDefinition(group, artifact, version, type);
+        if (flowRegistryClientDefinition == null) {
+            throw new ResourceNotFoundException("Unable to find definition for [%s:%s:%s:%s]".formatted(group, artifact, version, type));
+        }
+        return flowRegistryClientDefinition;
     }
 
     @Override
@@ -4007,6 +4101,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 case PROCESSOR -> authorizableLookup.getProcessor(sourceId).getAuthorizable();
                 case REPORTING_TASK -> authorizableLookup.getReportingTask(sourceId).getAuthorizable();
                 case FLOW_ANALYSIS_RULE -> authorizableLookup.getFlowAnalysisRule(sourceId).getAuthorizable();
+                case FLOW_REGISTRY_CLIENT -> authorizableLookup.getFlowRegistryClient(sourceId).getAuthorizable();
                 case PARAMETER_PROVIDER -> authorizableLookup.getParameterProvider(sourceId).getAuthorizable();
                 case CONTROLLER_SERVICE -> authorizableLookup.getControllerService(sourceId).getAuthorizable();
                 case FLOW_CONTROLLER -> controllerFacade;
@@ -4014,8 +4109,6 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 case OUTPUT_PORT -> authorizableLookup.getOutputPort(sourceId);
                 case REMOTE_PROCESS_GROUP -> authorizableLookup.getRemoteProcessGroup(sourceId);
                 case PROCESS_GROUP -> authorizableLookup.getProcessGroup(sourceId).getAuthorizable();
-                default ->
-                        throw new WebApplicationException(Response.serverError().entity("An unexpected type of component is the source of this bulletin.").build());
             };
         } catch (final ResourceNotFoundException e) {
             // if the underlying component is gone, disallow
@@ -4047,7 +4140,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final List<BulletinEntity> bulletinEntities = new ArrayList<>();
         for (final ListIterator<Bulletin> bulletinIter = results.listIterator(results.size()); bulletinIter.hasPrevious(); ) {
             final Bulletin bulletin = bulletinIter.previous();
-            bulletinEntities.add(entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), authorizeBulletin(bulletin)));
+            bulletinEntities.add(entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, true), authorizeBulletin(bulletin)));
         }
 
         // create the bulletin board
@@ -4076,6 +4169,11 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public void discoverCompatibleBundles(final VersionedProcessGroup versionedGroup) {
         BundleUtils.discoverCompatibleBundles(controllerFacade.getExtensionManager(), versionedGroup);
+    }
+
+    @Override
+    public void discoverCompatibleBundles(final Map<String, ParameterProviderReference> parameterProviders) {
+        BundleUtils.discoverCompatibleBundles(controllerFacade.getExtensionManager(), parameterProviders);
     }
 
     @Override
@@ -4179,7 +4277,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         }
 
         final Map<String, String> userContext;
-        if (user.getClientAddress() != null && !user.getClientAddress().trim().isEmpty()) {
+        if (user.getClientAddress() != null && !user.getClientAddress().isBlank()) {
             userContext = new HashMap<>();
             userContext.put(UserContextKeys.CLIENT_ADDRESS.name(), user.getClientAddress());
         } else {
@@ -4398,7 +4496,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final Authorizable controllerServiceAuthorizable = authorizableLookup.getControllerService(bulletin.getSourceId()).getAuthorizable();
                 final boolean controllerServiceAuthorized = controllerServiceAuthorizable.isAuthorized(authorizer, RequestAction.READ, user);
 
-                final BulletinEntity controllerServiceBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), controllerServiceAuthorized);
+                final BulletinEntity controllerServiceBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), controllerServiceAuthorized);
                 controllerServiceBulletinEntities.add(controllerServiceBulletin);
                 controllerBulletinEntities.add(controllerServiceBulletin);
             } catch (final ResourceNotFoundException ignored) {
@@ -4416,7 +4514,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final Authorizable reportingTaskAuthorizable = authorizableLookup.getReportingTask(bulletin.getSourceId()).getAuthorizable();
                 final boolean reportingTaskAuthorizableAuthorized = reportingTaskAuthorizable.isAuthorized(authorizer, RequestAction.READ, user);
 
-                final BulletinEntity reportingTaskBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), reportingTaskAuthorizableAuthorized);
+                final BulletinEntity reportingTaskBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), reportingTaskAuthorizableAuthorized);
                 reportingTaskBulletinEntities.add(reportingTaskBulletin);
                 controllerBulletinEntities.add(reportingTaskBulletin);
             } catch (final ResourceNotFoundException ignored) {
@@ -4434,7 +4532,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final Authorizable flowAnalysisRuleAuthorizable = authorizableLookup.getFlowAnalysisRule(bulletin.getSourceId()).getAuthorizable();
                 final boolean flowAnalysisRuleAuthorizableAuthorized = flowAnalysisRuleAuthorizable.isAuthorized(authorizer, RequestAction.READ, user);
 
-                final BulletinEntity flowAnalysisRuleBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), flowAnalysisRuleAuthorizableAuthorized);
+                final BulletinEntity flowAnalysisRuleBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), flowAnalysisRuleAuthorizableAuthorized);
                 flowAnalysisRuleBulletinEntities.add(flowAnalysisRuleBulletin);
                 controllerBulletinEntities.add(flowAnalysisRuleBulletin);
             } catch (final ResourceNotFoundException ignored) {
@@ -4452,7 +4550,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final Authorizable parameterProviderAuthorizable = authorizableLookup.getParameterProvider(bulletin.getSourceId()).getAuthorizable();
                 final boolean parameterProviderAuthorizableAuthorized = parameterProviderAuthorizable.isAuthorized(authorizer, RequestAction.READ, user);
 
-                final BulletinEntity parameterProviderBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), parameterProviderAuthorizableAuthorized);
+                final BulletinEntity parameterProviderBulletin = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), parameterProviderAuthorizableAuthorized);
                 parameterProviderBulletinEntities.add(parameterProviderBulletin);
                 controllerBulletinEntities.add(parameterProviderBulletin);
             } catch (final ResourceNotFoundException ignored) {
@@ -4470,7 +4568,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final Authorizable flowRegistryClientAuthorizable = authorizableLookup.getFlowRegistryClient(bulletin.getSourceId()).getAuthorizable();
                 final boolean flowRegistryClientkAuthorizableAuthorized = flowRegistryClientAuthorizable.isAuthorized(authorizer, RequestAction.READ, user);
 
-                final BulletinEntity flowRegistryClient = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), flowRegistryClientkAuthorizableAuthorized);
+                final BulletinEntity flowRegistryClient = entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), flowRegistryClientkAuthorizableAuthorized);
                 flowRegistryClientBulletinEntities.add(flowRegistryClient);
                 controllerBulletinEntities.add(flowRegistryClient);
             } catch (final ResourceNotFoundException ignored) {
@@ -4558,8 +4656,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<UserEntity> getUsers() {
         final Set<User> users = userDAO.getUsers();
         return users.stream()
-            .map(user -> createUserEntity(user, false))
-            .collect(Collectors.toSet());
+                .map(user -> createUserEntity(user, false))
+                .collect(Collectors.toSet());
     }
 
     /**
@@ -4599,7 +4697,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     private boolean isMatched(final String label, final String query) {
-        return StringUtils.isEmpty(query) || containsIgnoreCase(label, query);
+        return StringUtils.isEmpty(query) || Strings.CI.contains(label, query);
     }
 
     private UserEntity createUserEntity(final User user, final boolean enforceUserExistence) {
@@ -4631,8 +4729,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<UserGroupEntity> getUserGroups() {
         final Set<Group> userGroups = userGroupDAO.getUserGroups();
         return userGroups.stream()
-            .map(userGroup -> createUserGroupEntity(userGroup, false))
-            .collect(Collectors.toSet());
+                .map(userGroup -> createUserGroupEntity(userGroup, false))
+                .collect(Collectors.toSet());
     }
 
     private LabelEntity createLabelEntity(final Label label) {
@@ -4645,8 +4743,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<LabelEntity> getLabels(final String groupId) {
         final Set<Label> labels = labelDAO.getLabels(groupId);
         return labels.stream()
-            .map(label -> createLabelEntity(label))
-            .collect(Collectors.toSet());
+                .map(label -> createLabelEntity(label))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -4665,8 +4763,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<FunnelEntity> getFunnels(final String groupId) {
         final Set<Funnel> funnels = funnelDAO.getFunnels(groupId);
         return funnels.stream()
-            .map(funnel -> createFunnelEntity(funnel))
-            .collect(Collectors.toSet());
+                .map(funnel -> createFunnelEntity(funnel))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -4699,16 +4797,16 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<PortEntity> getInputPorts(final String groupId) {
         final Set<Port> inputPorts = inputPortDAO.getPorts(groupId);
         return inputPorts.stream()
-            .map(port -> createInputPortEntity(port))
-            .collect(Collectors.toSet());
+                .map(port -> createInputPortEntity(port))
+                .collect(Collectors.toSet());
     }
 
     @Override
     public Set<PortEntity> getOutputPorts(final String groupId) {
         final Set<Port> ports = outputPortDAO.getPorts(groupId);
         return ports.stream()
-            .map(port -> createOutputPortEntity(port))
-            .collect(Collectors.toSet());
+                .map(port -> createOutputPortEntity(port))
+                .collect(Collectors.toSet());
     }
 
     private ProcessGroupEntity createProcessGroupEntity(final ProcessGroup group) {
@@ -4728,7 +4826,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         List<BulletinEntity> bulletinEntities = new ArrayList<>();
         for (final Bulletin bulletin : bulletins) {
-            bulletinEntities.add(entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin), authorizeBulletin(bulletin)));
+            bulletinEntities.add(entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), authorizeBulletin(bulletin)));
         }
 
         return pruneAndSortBulletins(bulletinEntities, BulletinRepository.MAX_BULLETINS_PER_COMPONENT);
@@ -4762,8 +4860,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<ProcessGroupEntity> getProcessGroups(final String parentGroupId, final ProcessGroupRecursivity processGroupRecursivity) {
         final Set<ProcessGroup> groups = processGroupDAO.getProcessGroups(parentGroupId, processGroupRecursivity);
         return groups.stream()
-            .map(this::createProcessGroupEntity)
-            .collect(Collectors.toSet());
+                .map(this::createProcessGroupEntity)
+                .collect(Collectors.toSet());
     }
 
     private RemoteProcessGroupEntity createRemoteGroupEntity(final RemoteProcessGroup rpg, final NiFiUser user) {
@@ -4781,8 +4879,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final NiFiUser user = NiFiUserUtils.getNiFiUser();
         final Set<RemoteProcessGroup> rpgs = remoteProcessGroupDAO.getRemoteProcessGroups(groupId);
         return rpgs.stream()
-            .map(rpg -> createRemoteGroupEntity(rpg, user))
-            .collect(Collectors.toSet());
+                .map(rpg -> createRemoteGroupEntity(rpg, user))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -4922,8 +5020,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final Set<ControllerServiceNode> serviceNodes = controllerServiceDAO.getControllerServices(groupId, includeAncestorGroups, includeDescendantGroups);
 
         return serviceNodes.stream()
-            .map(serviceNode -> createControllerServiceEntity(serviceNode, includeReferencingComponents))
-            .collect(Collectors.toSet());
+                .map(serviceNode -> createControllerServiceEntity(serviceNode, includeReferencingComponents))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -4960,8 +5058,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Set<ReportingTaskEntity> getReportingTasks() {
         final Set<ReportingTaskNode> reportingTasks = reportingTaskDAO.getReportingTasks();
         return reportingTasks.stream()
-            .map(reportingTask -> createReportingTaskEntity(reportingTask))
-            .collect(Collectors.toSet());
+                .map(reportingTask -> createReportingTaskEntity(reportingTask))
+                .collect(Collectors.toSet());
     }
 
     @Override
@@ -5026,7 +5124,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
      * Creates entities for components referencing a ParameterProvider using the specified revisions.
      *
      * @param references referencing ParameterContexts
-     * @param revisions The revisions
+     * @param revisions  The revisions
      * @return The entity
      */
     private ParameterProviderReferencingComponentsEntity createParameterProviderReferencingComponentsEntity(
@@ -5245,11 +5343,11 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         versionedProcessGroup.getControllerServices().stream()
                 .filter(cs -> isServiceReferenced(cs.getIdentifier(), versionedProcessors, Collections.emptySet(), versionedProcessGroups))
                 .forEach(vcs -> {
-            final ExternalControllerServiceReference externalControllerService = new ExternalControllerServiceReference();
-            externalControllerService.setIdentifier(vcs.getIdentifier());
-            externalControllerService.setName(vcs.getName());
-            externalControllerServices.put(vcs.getIdentifier(), externalControllerService);
-        });
+                    final ExternalControllerServiceReference externalControllerService = new ExternalControllerServiceReference();
+                    externalControllerService.setIdentifier(vcs.getIdentifier());
+                    externalControllerService.setName(vcs.getName());
+                    externalControllerServices.put(vcs.getIdentifier(), externalControllerService);
+                });
 
         final Map<String, VersionedParameterContext> parameterContexts = new HashMap<>();
         final Map<String, ParameterProviderReference> parameterProviderReferences = new HashMap<>();
@@ -5379,13 +5477,12 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     /**
-     *
-     * @param registryId        the id of the registry to retrieve the versioned flow from
-     * @param branch            the name of the branch within the registry
-     * @param bucketId          the id of the bucket within the registry
-     * @param flowId            the id of the flow within the bucket/registry
-     * @param flowVersion       the version of the flow to retrieve
-     * @param fetchRemoteFlows  indicator to include remote flows when retrieving the flow
+     * @param registryId       the id of the registry to retrieve the versioned flow from
+     * @param branch           the name of the branch within the registry
+     * @param bucketId         the id of the bucket within the registry
+     * @param flowId           the id of the flow within the bucket/registry
+     * @param flowVersion      the version of the flow to retrieve
+     * @param fetchRemoteFlows indicator to include remote flows when retrieving the flow
      * @return a VersionedFlowSnapshot from a registry with the given version
      */
     private FlowSnapshotContainer getVersionedFlowSnapshot(final String registryId, final String branch, final String bucketId, final String flowId,
@@ -5401,9 +5498,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
             final FlowVersionLocation flowVersionLocation = new FlowVersionLocation(selectedBranch, bucketId, flowId, flowVersion);
             return flowRegistry.getFlowContents(clientUserContext, flowVersionLocation, fetchRemoteFlows);
         } catch (final FlowRegistryException e) {
-            logger.error(e.getMessage(), e);
-            throw new IllegalArgumentException("The Flow Registry with ID " + registryId + " reports that no Flow exists with Bucket "
-                    + bucketId + ", Flow " + flowId + ", Version " + flowVersion, e);
+            throw new IllegalArgumentException("Error retrieving flow [%s] in bucket [%s] branch [%s] with version [%s] using Flow Registry Client with ID [%s]: %s".formatted(flowId,
+                    bucketId, branch, flowVersion, registryId, e.getMessage()), e);
         } catch (final IOException ioe) {
             throw new IllegalStateException("Failed to communicate with Flow Registry when attempting to retrieve a versioned flow", ioe);
         }
@@ -5451,7 +5547,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 Function.identity(),
                 VersionedComponent::getIdentifier,
                 FlowComparatorVersionedStrategy.DEEP
-            );
+        );
 
         final FlowComparison flowComparison = flowComparator.compare();
         final Set<ComponentDifferenceDTO> differenceDtos = dtoFactory.createComponentDifferenceDtosForLocalModifications(flowComparison, flowContentsA, controllerFacade.getFlowManager());
@@ -5513,15 +5609,10 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final FlowRegistryClientNode flowRegistry = flowRegistryDAO.getFlowRegistryClient(versionControlInfo.getRegistryIdentifier());
         if (flowRegistry == null) {
             throw new IllegalStateException("Process Group with ID " + processGroupId + " is tracking to a flow in Flow Registry with ID " + versionControlInfo.getRegistryIdentifier()
-                + " but cannot find a Flow Registry with that identifier");
+                    + " but cannot find a Flow Registry with that identifier");
         }
 
-        VersionedProcessGroup registryGroup = null;
-        final VersionControlInformation vci = processGroup.getVersionControlInformation();
-        if (vci != null) {
-            registryGroup = vci.getFlowSnapshot();
-        }
-
+        VersionedProcessGroup registryGroup = versionControlInfo.getFlowSnapshot();
         if (registryGroup == null) {
             try {
                 final FlowVersionLocation flowVersionLocation = new FlowVersionLocation(versionControlInfo.getBranch(), versionControlInfo.getBucketIdentifier(),
@@ -5543,7 +5634,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         final Set<String> ancestorServiceIds = processGroup.getAncestorServiceIds();
         final FlowComparator flowComparator = new StandardFlowComparator(registryFlow, localFlow, ancestorServiceIds, new ConciseEvolvingDifferenceDescriptor(),
-            Function.identity(), VersionedComponent::getIdentifier, FlowComparatorVersionedStrategy.SHALLOW);
+                Function.identity(), VersionedComponent::getIdentifier, FlowComparatorVersionedStrategy.SHALLOW);
         final FlowComparison flowComparison = flowComparator.compare();
 
         final Set<ComponentDifferenceDTO> differenceDtos = dtoFactory.createComponentDifferenceDtosForLocalModifications(flowComparison, localGroup, controllerFacade.getFlowManager());
@@ -5608,7 +5699,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         try {
             return registry.registerFlowSnapshot(FlowRegistryClientContextFactory.getContextForUser(
-                    NiFiUserUtils.getNiFiUser()), flow, snapshot, externalControllerServiceReferences, parameterContexts,
+                            NiFiUserUtils.getNiFiUser()), flow, snapshot, externalControllerServiceReferences, parameterContexts,
                     parameterProviderReferences, comments, expectedVersion, registerAction);
         } catch (final IOException | FlowRegistryException e) {
             throw new NiFiCoreException("Failed to register flow with Flow Registry due to " + e.getMessage(), e);
@@ -5617,14 +5708,14 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
     @Override
     public VersionControlInformationEntity setVersionControlInformation(final Revision revision, final String processGroupId,
-            final VersionControlInformationDTO versionControlInfo, final Map<String, String> versionedComponentMapping) {
+                                                                        final VersionControlInformationDTO versionControlInfo, final Map<String, String> versionedComponentMapping) {
 
         final ProcessGroup group = processGroupDAO.getProcessGroup(processGroupId);
 
         final RevisionUpdate<VersionControlInformationDTO> snapshot = updateComponent(revision,
-            group,
-            () -> processGroupDAO.updateVersionControlInformation(versionControlInfo, versionedComponentMapping),
-            processGroup -> dtoFactory.createVersionControlInformationDto(processGroup));
+                group,
+                () -> processGroupDAO.updateVersionControlInformation(versionControlInfo, versionedComponentMapping),
+                processGroup -> dtoFactory.createVersionControlInformationDto(processGroup));
 
         return entityFactory.createVersionControlInformationEntity(snapshot.getComponent(), dtoFactory.createRevisionDTO(snapshot.getLastModification()));
     }
@@ -5634,9 +5725,9 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         final ProcessGroup group = processGroupDAO.getProcessGroup(processGroupId);
 
         final RevisionUpdate<VersionControlInformationDTO> snapshot = updateComponent(revision,
-            group,
-            () -> processGroupDAO.disconnectVersionControl(processGroupId),
-            processGroup -> dtoFactory.createVersionControlInformationDto(group));
+                group,
+                () -> processGroupDAO.disconnectVersionControl(processGroupId),
+                processGroup -> dtoFactory.createVersionControlInformationDto(group));
 
         return entityFactory.createVersionControlInformationEntity(snapshot.getComponent(), dtoFactory.createRevisionDTO(snapshot.getLastModification()));
     }
@@ -5707,84 +5798,86 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         final Set<String> ancestorServiceIds = group.getAncestorServiceIds();
         final FlowComparator flowComparator = new StandardFlowComparator(localFlow, proposedFlow, ancestorServiceIds, new StaticDifferenceDescriptor(),
-            Function.identity(), VersionedComponent::getIdentifier, FlowComparatorVersionedStrategy.DEEP);
+                Function.identity(), VersionedComponent::getIdentifier, FlowComparatorVersionedStrategy.DEEP);
         final FlowComparison comparison = flowComparator.compare();
 
         final FlowManager flowManager = controllerFacade.getFlowManager();
         final Set<AffectedComponentEntity> affectedComponents = comparison.getDifferences().stream()
-            .filter(difference -> difference.getDifferenceType() != DifferenceType.COMPONENT_ADDED) // components that are added are not components that will be affected in the local flow.
-            .filter(FlowDifferenceFilters.FILTER_ADDED_REMOVED_REMOTE_PORTS)
-            .filter(diff -> !FlowDifferenceFilters.isNewPropertyWithDefaultValue(diff, flowManager))
-            .filter(diff -> !FlowDifferenceFilters.isNewRelationshipAutoTerminatedAndDefaulted(diff, proposedFlow.getContents(), flowManager))
-            .filter(diff -> !FlowDifferenceFilters.isScheduledStateNew(diff))
-            .filter(diff -> !FlowDifferenceFilters.isLocalScheduleStateChange(diff))
-            .filter(diff -> !FlowDifferenceFilters.isPropertyMissingFromGhostComponent(diff, flowManager))
-            .filter(difference -> difference.getDifferenceType() != DifferenceType.POSITION_CHANGED)
-            .map(difference -> {
-                final VersionedComponent localComponent = difference.getComponentA();
+                .filter(difference -> difference.getDifferenceType() != DifferenceType.COMPONENT_ADDED) // components that are added are not components that will be affected in the local flow.
+                .filter(FlowDifferenceFilters.FILTER_ADDED_REMOVED_REMOTE_PORTS)
+                .filter(difference -> difference.getComponentA() != null) // a difference that would not affect a local component
+                .filter(diff -> !FlowDifferenceFilters.isNewPropertyWithDefaultValue(diff, flowManager))
+                .filter(diff -> !FlowDifferenceFilters.isNewRelationshipAutoTerminatedAndDefaulted(diff, proposedFlow.getContents(), flowManager))
+                .filter(diff -> !FlowDifferenceFilters.isScheduledStateNew(diff))
+                .filter(diff -> !FlowDifferenceFilters.isLocalScheduleStateChange(diff))
+                .filter(diff -> !FlowDifferenceFilters.isPropertyMissingFromGhostComponent(diff, flowManager))
+                .filter(diff -> !FlowDifferenceFilters.isStaticPropertyRemoved(diff, flowManager))
+                .filter(difference -> difference.getDifferenceType() != DifferenceType.POSITION_CHANGED)
+                .map(difference -> {
+                    final VersionedComponent localComponent = difference.getComponentA();
 
-                final String state;
-                final ProcessGroup localGroup;
-                switch (localComponent.getComponentType()) {
-                    case CONTROLLER_SERVICE:
-                        final String serviceId = localComponent.getInstanceIdentifier();
-                        final ControllerServiceNode serviceNode = controllerServiceDAO.getControllerService(serviceId);
-                        localGroup = serviceNode.getProcessGroup();
-                        state = serviceNode.getState().name();
-                        break;
-                    case PROCESSOR:
-                        final String processorId = localComponent.getInstanceIdentifier();
-                        final ProcessorNode procNode = processorDAO.getProcessor(processorId);
-                        localGroup = procNode.getProcessGroup();
-                        state = procNode.getPhysicalScheduledState().name();
-                        break;
-                    case REMOTE_INPUT_PORT:
-                        final InstantiatedVersionedRemoteGroupPort remoteInputPort = (InstantiatedVersionedRemoteGroupPort) localComponent;
-                        final RemoteProcessGroup inputPortRpg = remoteProcessGroupDAO.getRemoteProcessGroup(remoteInputPort.getInstanceGroupId());
-                        localGroup = inputPortRpg.getProcessGroup();
-                        state = inputPortRpg.getInputPort(remoteInputPort.getInstanceIdentifier()).getScheduledState().name();
-                        break;
-                    case REMOTE_OUTPUT_PORT:
-                        final InstantiatedVersionedRemoteGroupPort remoteOutputPort = (InstantiatedVersionedRemoteGroupPort) localComponent;
-                        final RemoteProcessGroup outputPortRpg = remoteProcessGroupDAO.getRemoteProcessGroup(remoteOutputPort.getInstanceGroupId());
-                        localGroup = outputPortRpg.getProcessGroup();
-                        state = outputPortRpg.getOutputPort(remoteOutputPort.getInstanceIdentifier()).getScheduledState().name();
-                        break;
-                    case INPUT_PORT:
-                        final InstantiatedVersionedPort versionedInputPort = (InstantiatedVersionedPort) localComponent;
-                        final Port inputPort = getInputPort(versionedInputPort);
-                        if (inputPort == null) {
-                            localGroup = null;
+                    final String state;
+                    final ProcessGroup localGroup;
+                    switch (localComponent.getComponentType()) {
+                        case CONTROLLER_SERVICE:
+                            final String serviceId = localComponent.getInstanceIdentifier();
+                            final ControllerServiceNode serviceNode = controllerServiceDAO.getControllerService(serviceId);
+                            localGroup = serviceNode.getProcessGroup();
+                            state = serviceNode.getState().name();
+                            break;
+                        case PROCESSOR:
+                            final String processorId = localComponent.getInstanceIdentifier();
+                            final ProcessorNode procNode = processorDAO.getProcessor(processorId);
+                            localGroup = procNode.getProcessGroup();
+                            state = procNode.getPhysicalScheduledState().name();
+                            break;
+                        case REMOTE_INPUT_PORT:
+                            final InstantiatedVersionedRemoteGroupPort remoteInputPort = (InstantiatedVersionedRemoteGroupPort) localComponent;
+                            final RemoteProcessGroup inputPortRpg = remoteProcessGroupDAO.getRemoteProcessGroup(remoteInputPort.getInstanceGroupId());
+                            localGroup = inputPortRpg.getProcessGroup();
+                            state = inputPortRpg.getInputPort(remoteInputPort.getInstanceIdentifier()).getScheduledState().name();
+                            break;
+                        case REMOTE_OUTPUT_PORT:
+                            final InstantiatedVersionedRemoteGroupPort remoteOutputPort = (InstantiatedVersionedRemoteGroupPort) localComponent;
+                            final RemoteProcessGroup outputPortRpg = remoteProcessGroupDAO.getRemoteProcessGroup(remoteOutputPort.getInstanceGroupId());
+                            localGroup = outputPortRpg.getProcessGroup();
+                            state = outputPortRpg.getOutputPort(remoteOutputPort.getInstanceIdentifier()).getScheduledState().name();
+                            break;
+                        case INPUT_PORT:
+                            final InstantiatedVersionedPort versionedInputPort = (InstantiatedVersionedPort) localComponent;
+                            final Port inputPort = getInputPort(versionedInputPort);
+                            if (inputPort == null) {
+                                localGroup = null;
+                                state = null;
+                            } else {
+                                localGroup = inputPort.getProcessGroup();
+                                state = inputPort.getScheduledState().name();
+                            }
+                            break;
+                        case OUTPUT_PORT:
+                            final InstantiatedVersionedPort versionedOutputPort = (InstantiatedVersionedPort) localComponent;
+                            final Port outputPort = getOutputPort(versionedOutputPort);
+                            if (outputPort == null) {
+                                localGroup = null;
+                                state = null;
+                            } else {
+                                localGroup = outputPort.getProcessGroup();
+                                state = outputPort.getScheduledState().name();
+                            }
+                            break;
+                        default:
                             state = null;
-                        } else {
-                            localGroup = inputPort.getProcessGroup();
-                            state = inputPort.getScheduledState().name();
-                        }
-                        break;
-                    case OUTPUT_PORT:
-                        final InstantiatedVersionedPort versionedOutputPort = (InstantiatedVersionedPort) localComponent;
-                        final Port outputPort = getOutputPort(versionedOutputPort);
-                        if (outputPort == null) {
                             localGroup = null;
-                            state = null;
-                        } else {
-                            localGroup = outputPort.getProcessGroup();
-                            state = outputPort.getScheduledState().name();
-                        }
-                        break;
-                    default:
-                        state = null;
-                        localGroup = null;
-                        break;
-                }
+                            break;
+                    }
 
-                if (localGroup != null && localGroup.resolveExecutionEngine() == ExecutionEngine.STATELESS) {
-                    return createStatelessGroupAffectedComponentEntity(localGroup);
-                }
+                    if (localGroup != null && localGroup.resolveExecutionEngine() == ExecutionEngine.STATELESS) {
+                        return createStatelessGroupAffectedComponentEntity(localGroup);
+                    }
 
-                return createAffectedComponentEntity((InstantiatedVersionedComponent) localComponent, localComponent.getComponentType().name(), state);
-            })
-            .collect(Collectors.toCollection(HashSet::new));
+                    return createAffectedComponentEntity((InstantiatedVersionedComponent) localComponent, localComponent.getComponentType().name(), state);
+                })
+                .collect(Collectors.toCollection(HashSet::new));
 
         for (final FlowDifference difference : comparison.getDifferences()) {
             // Ignore differences for adding remote ports
@@ -5816,24 +5909,24 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
                 final ProcessGroup localGroup = processGroupDAO.getProcessGroup(localGroupId);
 
                 localGroup.findAllProcessors().stream()
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
                 localGroup.findAllFunnels().stream()
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
                 localGroup.findAllInputPorts().stream()
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
                 localGroup.findAllOutputPorts().stream()
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
                 localGroup.findAllRemoteProcessGroups().stream()
-                    .flatMap(rpg -> Stream.concat(rpg.getInputPorts().stream(), rpg.getOutputPorts().stream()))
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .flatMap(rpg -> Stream.concat(rpg.getInputPorts().stream(), rpg.getOutputPorts().stream()))
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
                 localGroup.findAllControllerServices().stream()
-                    .map(comp -> createAffectedComponentEntity(comp))
-                    .forEach(affectedComponents::add);
+                        .map(comp -> createAffectedComponentEntity(comp))
+                        .forEach(affectedComponents::add);
             }
 
             if (localComponent.getComponentType() == org.apache.nifi.flow.ComponentType.CONTROLLER_SERVICE) {
@@ -6045,14 +6138,13 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
 
     private Authorizable getAuthorizable(final Connectable connectable) {
-        switch (connectable.getConnectableType()) {
-            case REMOTE_INPUT_PORT:
-            case REMOTE_OUTPUT_PORT:
+        return switch (connectable.getConnectableType()) {
+            case REMOTE_INPUT_PORT, REMOTE_OUTPUT_PORT -> {
                 final String rpgId = ((RemoteGroupPort) connectable).getRemoteProcessGroup().getIdentifier();
-                return authorizableLookup.getRemoteProcessGroup(rpgId);
-            default:
-                return authorizableLookup.getLocalConnectable(connectable.getIdentifier());
-        }
+                yield authorizableLookup.getRemoteProcessGroup(rpgId);
+            }
+            default -> authorizableLookup.getLocalConnectable(connectable.getIdentifier());
+        };
     }
 
     private Authorizable getAuthorizable(final String componentTypeName, final InstantiatedVersionedComponent versionedComponent) {
@@ -6118,36 +6210,36 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         }
 
         processGroup.findAllConnections().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllControllerServices().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllFunnels().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllInputPorts().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllOutputPorts().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllLabels().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllProcessGroups().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllProcessors().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllRemoteProcessGroups().stream()
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
         processGroup.findAllRemoteProcessGroups().stream()
-            .flatMap(rpg -> Stream.concat(rpg.getInputPorts().stream(), rpg.getOutputPorts().stream()))
-            .map(component -> revisionManager.getRevision(component.getIdentifier()))
-            .forEach(revisions::add);
+                .flatMap(rpg -> Stream.concat(rpg.getInputPorts().stream(), rpg.getOutputPorts().stream()))
+                .map(component -> revisionManager.getRevision(component.getIdentifier()))
+                .forEach(revisions::add);
 
         return revisions;
     }
@@ -6307,12 +6399,12 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
             // update the Process Group
             final VersionedExternalFlow externalFlow = createVersionedExternalFlow(proposedFlowSnapshot);
             processGroupDAO.updateProcessGroupFlow(groupId, externalFlow, versionControlInfo, componentIdSeed, verifyNotModified, updateSettings,
-                updateDescendantVersionedFlows);
+                    updateDescendantVersionedFlows);
 
             // update the revisions
             final Set<Revision> updatedRevisions = revisions.stream()
-                .map(rev -> revisionManager.getRevision(rev.getComponentId()).incrementRevision(revision.getClientId()))
-                .collect(Collectors.toSet());
+                    .map(rev -> revisionManager.getRevision(rev.getComponentId()).incrementRevision(revision.getClientId()))
+                    .collect(Collectors.toSet());
 
             // save
             controllerFacade.save();
@@ -6341,62 +6433,25 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         Authorizable authorizable;
         try {
-            switch (type) {
-                case Processor:
-                    authorizable = authorizableLookup.getProcessor(sourceId).getAuthorizable();
-                    break;
-                case ReportingTask:
-                    authorizable = authorizableLookup.getReportingTask(sourceId).getAuthorizable();
-                    break;
-                case FlowAnalysisRule:
-                    authorizable = authorizableLookup.getFlowAnalysisRule(sourceId).getAuthorizable();
-                    break;
-                case FlowRegistryClient:
-                    authorizable = authorizableLookup.getFlowRegistryClient(sourceId).getAuthorizable();
-                    break;
-                case ControllerService:
-                    authorizable = authorizableLookup.getControllerService(sourceId).getAuthorizable();
-                    break;
-                case Controller:
-                    authorizable = controllerFacade;
-                    break;
-                case InputPort:
-                    authorizable = authorizableLookup.getInputPort(sourceId);
-                    break;
-                case OutputPort:
-                    authorizable = authorizableLookup.getOutputPort(sourceId);
-                    break;
-                case ProcessGroup:
-                    authorizable = authorizableLookup.getProcessGroup(sourceId).getAuthorizable();
-                    break;
-                case RemoteProcessGroup:
-                    authorizable = authorizableLookup.getRemoteProcessGroup(sourceId);
-                    break;
-                case Funnel:
-                    authorizable = authorizableLookup.getFunnel(sourceId);
-                    break;
-                case Connection:
-                    authorizable = authorizableLookup.getConnection(sourceId).getAuthorizable();
-                    break;
-                case ParameterContext:
-                    authorizable = authorizableLookup.getParameterContext(sourceId);
-                    break;
-                case ParameterProvider:
-                    authorizable = authorizableLookup.getParameterProvider(sourceId).getAuthorizable();
-                    break;
-                case AccessPolicy:
-                    authorizable = authorizableLookup.getAccessPolicyById(sourceId);
-                    break;
-                case User:
-                case UserGroup:
-                    authorizable = authorizableLookup.getTenant();
-                    break;
-                case Label:
-                    authorizable = authorizableLookup.getLabel(sourceId);
-                    break;
-                default:
-                    throw new WebApplicationException(Response.serverError().entity("An unexpected type of component is the source of this action.").build());
-            }
+            authorizable = switch (type) {
+                case Processor -> authorizableLookup.getProcessor(sourceId).getAuthorizable();
+                case ReportingTask -> authorizableLookup.getReportingTask(sourceId).getAuthorizable();
+                case FlowAnalysisRule -> authorizableLookup.getFlowAnalysisRule(sourceId).getAuthorizable();
+                case FlowRegistryClient -> authorizableLookup.getFlowRegistryClient(sourceId).getAuthorizable();
+                case ControllerService -> authorizableLookup.getControllerService(sourceId).getAuthorizable();
+                case Controller -> controllerFacade;
+                case InputPort -> authorizableLookup.getInputPort(sourceId);
+                case OutputPort -> authorizableLookup.getOutputPort(sourceId);
+                case ProcessGroup -> authorizableLookup.getProcessGroup(sourceId).getAuthorizable();
+                case RemoteProcessGroup -> authorizableLookup.getRemoteProcessGroup(sourceId);
+                case Funnel -> authorizableLookup.getFunnel(sourceId);
+                case Connection -> authorizableLookup.getConnection(sourceId).getAuthorizable();
+                case ParameterContext -> authorizableLookup.getParameterContext(sourceId);
+                case ParameterProvider -> authorizableLookup.getParameterProvider(sourceId).getAuthorizable();
+                case AccessPolicy -> authorizableLookup.getAccessPolicyById(sourceId);
+                case User, UserGroup -> authorizableLookup.getTenant();
+                case Label -> authorizableLookup.getLabel(sourceId);
+            };
         } catch (final ResourceNotFoundException e) {
             // if the underlying component is gone, use the controller to see if permissions should be allowed
             authorizable = controllerFacade;
@@ -6536,43 +6591,43 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
         // Filter incoming connections by what user is authorized to READ
         final Set<ConnectionDiagnosticsDTO> incoming = dto.getIncomingConnections();
         final Set<ConnectionDiagnosticsDTO> filteredIncoming = incoming.stream()
-            .filter(connectionAuthorized)
-            .collect(Collectors.toSet());
+                .filter(connectionAuthorized)
+                .collect(Collectors.toSet());
 
         dto.setIncomingConnections(filteredIncoming);
 
         // Filter outgoing connections by what user is authorized to READ
         final Set<ConnectionDiagnosticsDTO> outgoing = dto.getOutgoingConnections();
         final Set<ConnectionDiagnosticsDTO> filteredOutgoing = outgoing.stream()
-            .filter(connectionAuthorized)
-            .collect(Collectors.toSet());
+                .filter(connectionAuthorized)
+                .collect(Collectors.toSet());
         dto.setOutgoingConnections(filteredOutgoing);
 
         // Filter out any controller services that are referenced by the Processor
         final Set<ControllerServiceDiagnosticsDTO> referencedServices = dto.getReferencedControllerServices();
         final Set<ControllerServiceDiagnosticsDTO> filteredReferencedServices = referencedServices.stream()
-            .filter(csDiagnostics -> {
-                final String csId = csDiagnostics.getControllerService().getId();
-                return authorizableLookup.getControllerService(csId).getAuthorizable().isAuthorized(authorizer, RequestAction.READ, user);
-            })
-            .map(csDiagnostics -> {
-                // Filter out any referencing components because those are generally not relevant from this context.
-                final ControllerServiceDTO serviceDto = csDiagnostics.getControllerService().getComponent();
-                if (serviceDto != null) {
-                    serviceDto.setReferencingComponents(null);
-                }
-                return csDiagnostics;
-            })
-            .collect(Collectors.toSet());
+                .filter(csDiagnostics -> {
+                    final String csId = csDiagnostics.getControllerService().getId();
+                    return authorizableLookup.getControllerService(csId).getAuthorizable().isAuthorized(authorizer, RequestAction.READ, user);
+                })
+                .map(csDiagnostics -> {
+                    // Filter out any referencing components because those are generally not relevant from this context.
+                    final ControllerServiceDTO serviceDto = csDiagnostics.getControllerService().getComponent();
+                    if (serviceDto != null) {
+                        serviceDto.setReferencingComponents(null);
+                    }
+                    return csDiagnostics;
+                })
+                .collect(Collectors.toSet());
         dto.setReferencedControllerServices(filteredReferencedServices);
 
         final Revision revision = revisionManager.getRevision(id);
         final RevisionDTO revisionDto = dtoFactory.createRevisionDTO(revision);
         final PermissionsDTO permissionsDto = dtoFactory.createPermissionsDto(processor);
         final List<BulletinEntity> bulletins = bulletinRepository.findBulletinsForSource(id).stream()
-            .map(bulletin -> dtoFactory.createBulletinDto(bulletin))
-            .map(bulletin -> entityFactory.createBulletinEntity(bulletin, permissionsDto.getCanRead()))
-            .collect(Collectors.toList());
+                .map(bulletin -> dtoFactory.createBulletinDto(bulletin, false))
+                .map(bulletin -> entityFactory.createBulletinEntity(bulletin, permissionsDto.getCanRead()))
+                .collect(Collectors.toList());
 
         final ProcessorStatusDTO processorStatusDto = dtoFactory.createProcessorStatusDto(controllerFacade.getProcessorStatus(processor.getIdentifier()));
         return entityFactory.createProcessorDiagnosticsEntity(dto, revisionDto, permissionsDto, processorStatusDto, bulletins);
@@ -6691,7 +6746,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     public Collection<CollectorRegistry> generateFlowMetrics() {
 
         return populateFlowMetrics().stream().map(AbstractMetricsRegistry::getRegistry)
-                                             .collect(Collectors.toList());
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -6735,8 +6790,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
 
         // create node dtos
         final List<NodeDTO> nodeDtos = clusterCoordinator.getNodeIdentifiers().stream()
-            .map(nodeId -> getNode(nodeId))
-            .collect(Collectors.toList());
+                .map(nodeId -> getNode(nodeId))
+                .collect(Collectors.toList());
         clusterDto.setNodes(nodeDtos);
 
         return clusterDto;
@@ -6806,8 +6861,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Override
     public Set<FlowAnalysisRuleEntity> getFlowAnalysisRules() {
         Set<FlowAnalysisRuleEntity> flowAnalysisRules = flowAnalysisRuleDAO.getFlowAnalysisRules().stream()
-            .map(flowAnalysisRule -> createFlowAnalysisRuleEntity(flowAnalysisRule))
-            .collect(Collectors.toSet());
+                .map(flowAnalysisRule -> createFlowAnalysisRuleEntity(flowAnalysisRule))
+                .collect(Collectors.toSet());
 
         return flowAnalysisRules;
     }
@@ -6831,69 +6886,85 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     }
 
     public Stream<RuleViolation> getRuleViolationStream(String processGroupId) {
+        if (ruleViolationsManager.isEmpty()) {
+            return Stream.empty();
+        }
+
         ProcessGroup processGroup = processGroupDAO.getProcessGroup(processGroupId);
 
-        Collection<RuleViolation> ruleViolations = ruleViolationsManager.getRuleViolationsForGroup(processGroupId);
+        if (processGroup.getIdentifier().equals(processGroupDAO.getProcessGroup(FlowManager.ROOT_GROUP_ID_ALIAS).getIdentifier())) {
+            return ruleViolationsManager.getAllRuleViolations().stream();
+        } else {
 
-        Stream<RuleViolation> ruleViolationStreamForGroupAndAllChildren = Stream.concat(
-            ruleViolations.stream(),
-            processGroup.getProcessGroups().stream()
-                .map(ProcessGroup::getIdentifier)
-                .flatMap(this::getRuleViolationStream)
-        );
+            Set<String> allIdsOfProcessGroupAndChildren = new HashSet<>();
 
-        return ruleViolationStreamForGroupAndAllChildren;
+            collectGroupIdsRecursively(processGroupId, allIdsOfProcessGroupAndChildren);
+
+            Collection<RuleViolation> ruleViolations = ruleViolationsManager.getRuleViolationsForGroups(allIdsOfProcessGroupAndChildren);
+
+            return ruleViolations.stream();
+        }
+    }
+
+    private void collectGroupIdsRecursively(String processGroupId, Set<String> allIdsOfProcessGroupAndChildren) {
+        allIdsOfProcessGroupAndChildren.add(processGroupId);
+
+        ProcessGroup processGroup = processGroupDAO.getProcessGroup(processGroupId);
+        Set<ProcessGroup> children = processGroup.getProcessGroups();
+        for (ProcessGroup child : children) {
+            collectGroupIdsRecursively(child.getIdentifier(), allIdsOfProcessGroupAndChildren);
+        }
     }
 
     public FlowAnalysisResultEntity createFlowAnalysisResultEntity(Collection<RuleViolation> ruleViolations) {
         FlowAnalysisResultEntity entity = new FlowAnalysisResultEntity();
 
         controllerFacade.getFlowManager().getFlowAnalyzer().ifPresent(
-            flowAnalyzer -> entity.setFlowAnalysisPending(flowAnalyzer.isFlowAnalysisRequired())
+                flowAnalyzer -> entity.setFlowAnalysisPending(flowAnalyzer.isFlowAnalysisRequired())
         );
 
         List<FlowAnalysisRuleDTO> flowAnalysisRuleDtos = flowAnalysisRuleDAO.getFlowAnalysisRules().stream()
-            .filter(FlowAnalysisRuleNode::isEnabled)
-            .sorted(Comparator.comparing(FlowAnalysisRuleNode::getName))
-            .map(flowAnalysisRule -> dtoFactory.createFlowAnalysisRuleDto(flowAnalysisRule))
-            .collect(Collectors.toList());
+                .filter(FlowAnalysisRuleNode::isEnabled)
+                .sorted(Comparator.comparing(FlowAnalysisRuleNode::getName))
+                .map(flowAnalysisRule -> dtoFactory.createFlowAnalysisRuleDto(flowAnalysisRule))
+                .collect(Collectors.toList());
 
         List<FlowAnalysisRuleViolationDTO> ruleViolationDtos = ruleViolations.stream()
-            .sorted(Comparator.comparing(RuleViolation::getSubjectId)
-                    .thenComparing(RuleViolation::getScope)
-                    .thenComparing(RuleViolation::getRuleId)
-                    .thenComparing(RuleViolation::getIssueId)
-            )
-            .map(ruleViolation -> {
-                FlowAnalysisRuleViolationDTO ruleViolationDto = new FlowAnalysisRuleViolationDTO();
+                .sorted(Comparator.comparing(RuleViolation::getSubjectId)
+                        .thenComparing(RuleViolation::getScope)
+                        .thenComparing(RuleViolation::getRuleId)
+                        .thenComparing(RuleViolation::getIssueId)
+                )
+                .map(ruleViolation -> {
+                    FlowAnalysisRuleViolationDTO ruleViolationDto = new FlowAnalysisRuleViolationDTO();
 
-                String subjectId = ruleViolation.getSubjectId();
-                String groupId = ruleViolation.getGroupId();
+                    String subjectId = ruleViolation.getSubjectId();
+                    String groupId = ruleViolation.getGroupId();
 
-                ruleViolationDto.setScope(ruleViolation.getScope());
-                ruleViolationDto.setSubjectId(subjectId);
-                ruleViolationDto.setRuleId(ruleViolation.getRuleId());
-                ruleViolationDto.setIssueId(ruleViolation.getIssueId());
+                    ruleViolationDto.setScope(ruleViolation.getScope());
+                    ruleViolationDto.setSubjectId(subjectId);
+                    ruleViolationDto.setRuleId(ruleViolation.getRuleId());
+                    ruleViolationDto.setIssueId(ruleViolation.getIssueId());
 
-                ruleViolationDto.setSubjectComponentType(ruleViolation.getSubjectComponentType().name());
-                ruleViolationDto.setEnforcementPolicy(ruleViolation.getEnforcementPolicy().toString());
+                    ruleViolationDto.setSubjectComponentType(ruleViolation.getSubjectComponentType().name());
+                    ruleViolationDto.setEnforcementPolicy(ruleViolation.getEnforcementPolicy().toString());
 
-                PermissionsDTO subjectPermissionDto = createPermissionDto(
-                        subjectId,
-                        ruleViolation.getSubjectComponentType(),
-                        groupId
-                );
-                ruleViolationDto.setSubjectPermissionDto(subjectPermissionDto);
+                    PermissionsDTO subjectPermissionDto = createPermissionDto(
+                            subjectId,
+                            ruleViolation.getSubjectComponentType(),
+                            groupId
+                    );
+                    ruleViolationDto.setSubjectPermissionDto(subjectPermissionDto);
 
-                if (subjectPermissionDto.getCanRead()) {
-                    ruleViolationDto.setGroupId(groupId);
-                    ruleViolationDto.setSubjectDisplayName(ruleViolation.getSubjectDisplayName());
-                    ruleViolationDto.setViolationMessage(ruleViolation.getViolationMessage());
-                }
+                    if (subjectPermissionDto.getCanRead()) {
+                        ruleViolationDto.setGroupId(groupId);
+                        ruleViolationDto.setSubjectDisplayName(ruleViolation.getSubjectDisplayName());
+                        ruleViolationDto.setViolationMessage(ruleViolation.getViolationMessage());
+                    }
 
-                return ruleViolationDto;
-            })
-            .collect(Collectors.toList());
+                    return ruleViolationDto;
+                })
+                .collect(Collectors.toList());
 
         entity.setRules(flowAnalysisRuleDtos);
         entity.setRuleViolations(ruleViolationDtos);
@@ -7160,7 +7231,7 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     /**
      * Create a new flow mapper using a mockable method for testing
      *
-     * @param extensionManager  the extension manager to create the flow mapper with
+     * @param extensionManager the extension manager to create the flow mapper with
      * @return a new NiFiRegistryFlowMapper instance
      */
     protected NiFiRegistryFlowMapper makeNiFiRegistryFlowMapper(final ExtensionManager extensionManager) {
@@ -7170,8 +7241,8 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     /**
      * Create a new flow mapper using a mockable method for testing
      *
-     * @param extensionManager  the extension manager to create the flow mapper with
-     * @param options  the flow mapping options
+     * @param extensionManager the extension manager to create the flow mapper with
+     * @param options          the flow mapping options
      * @return a new NiFiRegistryFlowMapper instance
      */
     protected NiFiRegistryFlowMapper makeNiFiRegistryFlowMapper(final ExtensionManager extensionManager, final FlowMappingOptions options) {
@@ -7353,5 +7424,54 @@ public class StandardNiFiServiceFacade implements NiFiServiceFacade {
     @Autowired
     public void setAssetManager(final AssetManager assetManager) {
         this.assetManager = assetManager;
+    }
+
+    @Override
+    public ClearBulletinsResultEntity clearBulletinsForComponent(final String componentId, final Instant fromTimestamp) {
+        if (fromTimestamp == null) {
+            throw new IllegalArgumentException("From timestamp must be specified");
+        }
+
+        final int bulletinsCleared = bulletinRepository.clearBulletinsForComponent(componentId, fromTimestamp);
+
+        // Get the current bulletins for the component after clearing
+        final List<Bulletin> currentBulletins = bulletinRepository.findBulletinsForSource(componentId);
+        final List<BulletinEntity> bulletinEntities = currentBulletins.stream()
+                .map(bulletin -> entityFactory.createBulletinEntity(dtoFactory.createBulletinDto(bulletin, false), authorizeBulletin(bulletin)))
+                .collect(Collectors.toList());
+
+        // Create the response entity
+        final ClearBulletinsResultEntity entity = new ClearBulletinsResultEntity();
+        entity.setComponentId(componentId);
+        entity.setBulletinsCleared(bulletinsCleared);
+        entity.setBulletins(bulletinEntities);
+
+        return entity;
+    }
+
+
+    @Override
+    public ClearBulletinsForGroupResultsEntity clearBulletinsForComponents(final String processGroupId, final Instant fromTimestamp, final Set<String> componentIds) {
+        if (fromTimestamp == null) {
+            throw new IllegalArgumentException("From timestamp must be specified");
+        }
+        if (componentIds == null || componentIds.isEmpty()) {
+            throw new IllegalArgumentException("Component IDs must be specified");
+        }
+
+        // Clear bulletins for all components specified
+        final int totalBulletinsCleared = bulletinRepository.clearBulletinsForComponents(componentIds, fromTimestamp);
+
+        // Create the response entity
+        final ClearBulletinsForGroupResultsEntity entity = new ClearBulletinsForGroupResultsEntity();
+        entity.setBulletinsCleared(totalBulletinsCleared);
+
+        return entity;
+    }
+
+    @Override
+    public Set<String> filterComponents(final String groupId, final Function<ProcessGroup, Set<String>> getComponents) {
+        final ProcessGroup processGroup = processGroupDAO.getProcessGroup(groupId);
+        return getComponents.apply(processGroup);
     }
 }
